corrected RL text in equations

--- a/tex/electronicsDifferencePair.tex
+++ b/tex/electronicsDifferencePair.tex
@@ -287,7 +287,7 @@ i_{E2}=\frac{2 \times I}{1+e^{\frac{+0.15}{0.025}}}=\frac{2 \times I}{1+403.41} 
 
 
 
-اس حصہ میں ہم تفرقی جوڑے کو بطور ایمپلیفائر استعمال کریں گے۔شکل \حوالہ{شکل_تفرقی_جوڑے_کے_رو_بالمقابل_دباو_کے_خط}  کو دیکھتے ہوئے معلوم ہوتا ہے کہ دو نکتہ دار لکیروں کے درمیان داخلی اشارہ \عددی{v_d} اور برقی رو  \عددی{i_{E1}} (یا \عددی{i_{E2}}) کے مابین خطی تعلق پایا جاتا ہے یعنی اس خطے میں \عددی{v_d} جتنے گنا بڑھایا یا گھٹایا جائے \عددی{i_{E1}} (یا \عددی{i_{E2}} ) میں اتنے گنا کی ہی تبدیلی پیدا ہوتی ہے۔خطی تعلق کا خطہ تقریباً
+اس حصہ میں ہم تفرقی جوڑے کو بطور ایمپلیفائر استعمال کریں گے۔شکل \حوالہ{شکل_تفرقی_جوڑے_کے_رو_بالمقابل_دباو_کے_خط}  کو دیکھتے ہوئے معلوم ہوتا ہے کہ دو نقطہ دار لکیروں کے درمیان داخلی اشارہ \عددی{v_d} اور برقی رو  \عددی{i_{E1}} (یا \عددی{i_{E2}}) کے مابین خطی تعلق پایا جاتا ہے یعنی اس خطے میں \عددی{v_d} جتنے گنا بڑھایا یا گھٹایا جائے \عددی{i_{E1}} (یا \عددی{i_{E2}} ) میں اتنے گنا کی ہی تبدیلی پیدا ہوتی ہے۔خطی تعلق کا خطہ تقریباً
 \begin{align}
 \abs{v_d} < \frac{V_T}{2}
 \end{align}
@@ -334,7 +334,7 @@ i_{C1}&=\alpha i_{E1}=\alpha I +\frac{\alpha I}{V_T} \frac{v_d}{2}\\
 i_{C2}&=\alpha i_{E2}=\alpha I -\frac{\alpha I}{V_T} \frac{v_d}{2}
 \end{aligned}
 \end{gather}
-تفرقی اشارہ کے عدم موجودگی، یعنی \عددی{v_d=0} ، کی صورت میں \عددی{i_{E1}=i_{E2}=I}  ہی حاصل ہوتے ہیں جو کہ ان ٹرانزسٹر کے نکتہ کارکردگی پر برقی رو \عددی{I_{EQ1}} اور \عددی{I_{EQ2}}  ہیں۔اسی طرح \عددی{v_d=0} کی صورت میں مساوات \حوالہ{مساوات_تفرقی_پہلی_رو_تسلسل_کے_دو_جز}  سے \عددی{i_{C1}=\alpha I} اور \عددی{i_{C2}=\alpha I} حاصل ہوتا ہے جو نکتہ کارکردگی پر کلکٹر برقی رو ہیں جنہیں \عددی{I_{CQ}} یا صرف \عددی{I_{C}} لکھا جا سکتا ہے۔تفرقی اشارہ کے موجودگی میں مساوات \حوالہ{مساوات_تفرقی_پہلی_رو_تسلسل_کے_دو_جز} میں یک سمتی رو کے علاوہ بدلتی رو بھی پائی جاتی ہے۔یوں انہیں
+تفرقی اشارہ کے عدم موجودگی، یعنی \عددی{v_d=0} ، کی صورت میں \عددی{i_{E1}=i_{E2}=I}  ہی حاصل ہوتے ہیں جو کہ ان ٹرانزسٹر کے نقطہ کارکردگی پر برقی رو \عددی{I_{EQ1}} اور \عددی{I_{EQ2}}  ہیں۔اسی طرح \عددی{v_d=0} کی صورت میں مساوات \حوالہ{مساوات_تفرقی_پہلی_رو_تسلسل_کے_دو_جز}  سے \عددی{i_{C1}=\alpha I} اور \عددی{i_{C2}=\alpha I} حاصل ہوتا ہے جو نقطہ کارکردگی پر کلکٹر برقی رو ہیں جنہیں \عددی{I_{CQ}} یا صرف \عددی{I_{C}} لکھا جا سکتا ہے۔تفرقی اشارہ کے موجودگی میں مساوات \حوالہ{مساوات_تفرقی_پہلی_رو_تسلسل_کے_دو_جز} میں یک سمتی رو کے علاوہ بدلتی رو بھی پائی جاتی ہے۔یوں انہیں
 \begin{gather}
 \begin{aligned}
 i_{C1}&=ِI_{C}+\frac{\alpha I}{V_T} \frac{v_d}{2}\\
@@ -692,14 +692,14 @@ I_{OS}=\abs{\frac{I}{\beta+1} \left(\frac{\Delta \beta}{\beta+1} \right )}=I_B \
 حاصل ہوتے ہیں۔
 
 \حصہ{مخلوط ادوار میں دو جوڑ ٹرانزسٹر کے مائل کرنے کے طریقے}
-ہم نے دو جوڑ ٹرانزسٹر کو چار عدد مزاحمت کے مدد سے مائل کر کے ان کے نکتہ کارکردگی تعین کرنا دیکھا۔مخلوط دور میں ٹرانزسٹر کے نسبت، مزاحمت بنانا زیادہ مہنگا ثابت ہوتا ہے۔اسی لئے مخلوط ادوار میں مزاحمت کے استعمال سے گریز کیا جاتا ہے اور ان میں ٹرانزسٹر کو \موٹا{پیدا کار مستقل برقی رو}\فرہنگ{پیدا کار مستقل برقی رو}\فرہنگ{constant current source}\حاشیہب{constant current source}  کی مدد سے مائل کیا جاتا ہے۔اس سے پہلے کہ ہم دیکھیں یہ کیسا کیا جاتا ہے یہ ضروری ہے کہ \موٹا{پیدا کار مستقل برقی رو} پر غور کیا جائے۔
+ہم نے دو جوڑ ٹرانزسٹر کو چار عدد مزاحمت کے مدد سے مائل کر کے ان کے نقطہ کارکردگی تعین کرنا دیکھا۔مخلوط دور میں ٹرانزسٹر کے نسبت، مزاحمت بنانا زیادہ مہنگا ثابت ہوتا ہے۔اسی لئے مخلوط ادوار میں مزاحمت کے استعمال سے گریز کیا جاتا ہے اور ان میں ٹرانزسٹر کو \موٹا{پیدا کار مستقل برقی رو}\فرہنگ{پیدا کار مستقل برقی رو}\فرہنگ{constant current source}\حاشیہب{constant current source}  کی مدد سے مائل کیا جاتا ہے۔اس سے پہلے کہ ہم دیکھیں یہ کیسا کیا جاتا ہے یہ ضروری ہے کہ \موٹا{پیدا کار مستقل برقی رو} پر غور کیا جائے۔
 
 \حصہ{پیداکار مستقل برقی رو}
 شکل  \حوالہ{شکل_پیداکار_مستقل_برقی_رو} الف میں \عددی{npn}  ٹرانزسٹر استعمال کرتے ہوئے \موٹا{پیداکار مستقل برقی رو} کا حصول دکھایا گیا ہے۔ اس دور میں، \عددی{\alpha} کو تقریباً ایک \عددی{(\approx 1)}  تصور کرتے ہوئے، جب تک ٹرانزسٹر افزائندہ  رہے، \عددی{I_{\textup{بار}}}  کا دارومدار زینر ڈایوڈ کے \عددی{V_Z} اور مزاحمت \عددی{R_E} پر ہے یعنی
 \begin{align*}
 I_E=\frac{V_Z-V_{BE}}{R_E}
 \end{align*}
-یوں \عددی{I_{\textup{بار}}}  تبدیل کرنے سے اس میں برقی رو تبدیل نہیں ہوتی۔اس سے ہم دیکھ سکتے ہیں کہ \عددی{I_{\textup{بار}}}   سے منسلک بقایا دور بطور \موٹا{پیداکار مستقل برقی رو} کام کرتا ہے۔شکل میں نکتہ دار دائرے میں بند حصے کو \موٹا{پیداکار مستقل برقی} رو کہتے ہیں۔
+یوں \عددی{I_{\textup{بار}}}  تبدیل کرنے سے اس میں برقی رو تبدیل نہیں ہوتی۔اس سے ہم دیکھ سکتے ہیں کہ \عددی{I_{\textup{بار}}}   سے منسلک بقایا دور بطور \موٹا{پیداکار مستقل برقی رو} کام کرتا ہے۔شکل میں نقطہ دار دائرے میں بند حصے کو \موٹا{پیداکار مستقل برقی} رو کہتے ہیں۔
 شکل \حوالہ{شکل_پیداکار_مستقل_برقی_رو} ب میں \موٹا{پیداکار مستقل برقی رو} کی علامت (تیر والا دائرہ) استعمال کرتے ہوئے اسی دور کو دوبارہ پیش کیا گیا ہے۔علامت میں تیر کا نشان مستقل برقی رو کی سمت دکھلاتا ہے۔آپ دیکھ سکتے ہیں کہ اس طرز کے پیداکار مستقل برقی رو کو استعمال کرتے ہوئے بار کو مثبت برقی دباو \عددی{V_{CC}} اور پیداکار مستقل برقی رو کے مابین نسب کیا جاتا ہے اور مستقل برقی رو  کی سمت بار سے پیداکار مستقل برقی رو کی جانب ہوتی ہے۔یہاں آپ دیکھ سکتے ہیں کہ بار سے برقی رو خارج ہو کر پیداکار مستقل برقی رو میں داخل ہوتا ہے۔ایسا پیداکار مستقل برقی رو بار سے برقی رو زبردستی خارج  کراتا ہے۔اسی لئے اس دور کا زیادہ مقبول نام \موٹا{خارج کار مستقل برقی رو} یا صفر \موٹا{خارج کار برقی رو}\فرہنگ{خارج کار برقی رو}\حاشیہب{current sink}\فرہنگ{current sink} ہے۔ 
 \begin{figure}
 \centering
@@ -787,7 +787,7 @@ I_{\textup{حوالہ}}=\frac{V_{CC}-V_{BE1}-V_{BE3}}{R}
 %=====
 
 \ابتدا{مثال} \شناخت{مثال_تفرقی_عکس_الف}
-شکل \حوالہ{شکل_پیداکار_مستقل_برقی_رو_اور_اس_کی_علامت} الف میں، نکتہ دار لکیر میں بند، ایک سادہ خارج کار مستقل برقی رو دکھایا گیا ہے جسے استعمال کرتے ہوئے برقی بار \عددی{R_{\textup{بار}}} میں برقی رو \عددی{I_{\textup{عکس}}}  گزاری جا رہی ہے۔شکل  ب میں خارج کار مستقل برقی رو کی علامت استعمال کرتے ہوئے اسی دور کو دوبارہ پیش کیا گیا ہے۔اگر 
+شکل \حوالہ{شکل_پیداکار_مستقل_برقی_رو_اور_اس_کی_علامت} الف میں، نقطہ دار لکیر میں بند، ایک سادہ خارج کار مستقل برقی رو دکھایا گیا ہے جسے استعمال کرتے ہوئے برقی بار \عددی{R_{\textup{بار}}} میں برقی رو \عددی{I_{\textup{عکس}}}  گزاری جا رہی ہے۔شکل  ب میں خارج کار مستقل برقی رو کی علامت استعمال کرتے ہوئے اسی دور کو دوبارہ پیش کیا گیا ہے۔اگر 
 \begin{align*}
 R&=\SI{11.3}{\kilo \ohm}\\
 R_{\textup{بار}}&=\SI{5}{\kilo \ohm}
@@ -865,7 +865,7 @@ I&=\frac{15+12-0.2}{40 \times 10^{3}}=\SI{0.67}{\milli \ampere}
 
 \انتہا{مثال}
 %==========
-شکل \حوالہ{شکل_پیداکار_مستقل_برقی_رو_کے_مختلف_ادوار} الف میں \عددی{npn} ٹرانزسٹروں پر مبنی خارج کار مستقل برقی رو دکھایا گیا ہے۔یہ دور نکتہ دار لکیر کی جگہ نسب مطلوبہ دور میں مستقل برقی رو \عددی{I_{\textup{عکس}}} گزارتا ہے۔اس شکل کے لئے ہم لکھ سکتے ہیں۔
+شکل \حوالہ{شکل_پیداکار_مستقل_برقی_رو_کے_مختلف_ادوار} الف میں \عددی{npn} ٹرانزسٹروں پر مبنی خارج کار مستقل برقی رو دکھایا گیا ہے۔یہ دور نقطہ دار لکیر کی جگہ نسب مطلوبہ دور میں مستقل برقی رو \عددی{I_{\textup{عکس}}} گزارتا ہے۔اس شکل کے لئے ہم لکھ سکتے ہیں۔
 \begin{align*}
 V_{CC}&=I_{\textup{حوالہ}} R+ V_{BE} +V_{EE}\\
 I_{\textup{حوالہ}}&=\frac{V_{CC}-0.7-V_{EE}}{R}=I_{\textup{عکس}}
@@ -877,7 +877,7 @@ I_{\textup{حوالہ}}&=\frac{V_{CC}-0.7-V_{EE}}{R}=I_{\textup{عکس}}
 \caption{پیداکار مستقل برقی رو کے مختلف ادوار}
 \label{شکل_پیداکار_مستقل_برقی_رو_کے_مختلف_ادوار}
 \end{figure}
-شکل  ب میں اسی کا مساوی \عددی{pnp}  ٹرانزسٹروں پر مبنی  داخل کار مستقل برقی رو دکھایا گیا ہے۔یہ دور نکتہ دار لکیر کی جگہ نسب مطلوبہ دور میں مستقل برقی رو\عددی{I_{\textup{عکس}}} گزارتا ہے۔
+شکل  ب میں اسی کا مساوی \عددی{pnp}  ٹرانزسٹروں پر مبنی  داخل کار مستقل برقی رو دکھایا گیا ہے۔یہ دور نقطہ دار لکیر کی جگہ نسب مطلوبہ دور میں مستقل برقی رو\عددی{I_{\textup{عکس}}} گزارتا ہے۔
 
 شکل  پ میں ان دونوں ادوار کو یوں جوڑا گیا ہے کہ ایک ہی مزاحمت دونوں پیداکار مستقل برقی رو کے  \عددی{I_{\textup{عکس}}}  کا تعین کرتا ہے۔اس دور کے لئے ہم لکھ سکتے ہیں۔
 \begin{align*}
@@ -1057,7 +1057,7 @@ g_{m5}&=g_{m6}=\frac{0.3 \times 10^{-3}}{25 \times 10^{-3}}=\SI{0.012}{\siemens}
 r_{e5}&=r_{e6}=\frac{1}{0.012}=\SI{83.33}{\ohm}\\
 r_{be5}&=r_{be6}=\beta r_e =\SI{8.3}{\kilo \ohm}
 \end{align*}
-ہیں۔اس جوڑی کا داخلی مزاحمت \عددیء{2 r_{be}} ہے جو پہلی تفرقی جوڑی کا بار بنتا ہے۔شکل میں \عددیء{Q_2} اور \عددیء{Q_3} کے کلکٹر کے مابین \عددیء{\SI{8.3}{\kilo \ohm}} کے سلسلہ وار مزاحمت اسی داخلی مزاحمت کو ظاہر کرتا ہے۔تفرقی اشارے کی صورت میں دوسری تفرقی جوڑی کا ایمٹر برقی زمین پر رہتا ہے۔یوں \عددیء{Q_2} اور \عددیء{Q_3} کے کلکٹر پر دونوں  \عددیء{\SI{8.3}{\kilo \ohm}} کا درمیانی نکتہ برقی زمین پر ہو گا۔ان معلومات کو استعمال کرتے ہوئے آپ دیکھ سکتے ہیں کہ پہلی تفرقی جوڑی کی افزائش
+ہیں۔اس جوڑی کا داخلی مزاحمت \عددیء{2 r_{be}} ہے جو پہلی تفرقی جوڑی کا بار بنتا ہے۔شکل میں \عددیء{Q_2} اور \عددیء{Q_3} کے کلکٹر کے مابین \عددیء{\SI{8.3}{\kilo \ohm}} کے سلسلہ وار مزاحمت اسی داخلی مزاحمت کو ظاہر کرتا ہے۔تفرقی اشارے کی صورت میں دوسری تفرقی جوڑی کا ایمٹر برقی زمین پر رہتا ہے۔یوں \عددیء{Q_2} اور \عددیء{Q_3} کے کلکٹر پر دونوں  \عددیء{\SI{8.3}{\kilo \ohm}} کا درمیانی نقطہ برقی زمین پر ہو گا۔ان معلومات کو استعمال کرتے ہوئے آپ دیکھ سکتے ہیں کہ پہلی تفرقی جوڑی کی افزائش
 \begin{gather}
 \begin{aligned}\label{مساوات_تفرقی_پہلی_کڑی_کی_افزائش}
 A_{d1}&=\frac{v_{o1}}{v_d}=\frac{\sum R_C}{\sum R_E}\\
@@ -1421,7 +1421,7 @@ I_{\textrm{عکس}} \approx \left[\frac{1}{1+\frac{2}{\beta^2 }} \right] I_{\tex
 \label{شکل_تفرقی_ولسن_آئینے_کی_خارجی_مزاحمت}
 \end{figure}
 
-آئیں آئینے کی خارجی مزاحمت حاصل کریں۔ایسا کرنے کی خاطر \عددیء{Q_3} کے کلکٹر پر \عددیء{v_t} لاگو کرتے ہوئے \عددیء{i_t} کا حساب لگاتے ہیں۔\عددیء{\tfrac{v_t}{i_t}} خارجی مزاحمت \عددیء{R_o} ہو گا۔\عددیء{Q_3} کا پائے ماڈل استعمال کرتے ہوئے ولسن آئینے کو شکل \حوالہ{شکل_تفرقی_ولسن_آئینے_کی_خارجی_مزاحمت} میں دکھایا گیا ہے۔نکتہ دار دائرے سے  دو جگہ \عددیء{i_c} برقی رو خارج اور ایک جگہ \عددیء{i_t} داخلی ہو رہی ہے۔یوں کرچاف کے قانون برائے برقی رو کی مدد سے ہم لکھ سکتے ہیں
+آئیں آئینے کی خارجی مزاحمت حاصل کریں۔ایسا کرنے کی خاطر \عددیء{Q_3} کے کلکٹر پر \عددیء{v_t} لاگو کرتے ہوئے \عددیء{i_t} کا حساب لگاتے ہیں۔\عددیء{\tfrac{v_t}{i_t}} خارجی مزاحمت \عددیء{R_o} ہو گا۔\عددیء{Q_3} کا پائے ماڈل استعمال کرتے ہوئے ولسن آئینے کو شکل \حوالہ{شکل_تفرقی_ولسن_آئینے_کی_خارجی_مزاحمت} میں دکھایا گیا ہے۔نقطہ دار دائرے سے  دو جگہ \عددیء{i_c} برقی رو خارج اور ایک جگہ \عددیء{i_t} داخلی ہو رہی ہے۔یوں کرچاف کے قانون برائے برقی رو کی مدد سے ہم لکھ سکتے ہیں
 \begin{align}\label{مساوات_تفرقی_ولسن_ٹیست_برقی_رو}
 i_t=2 i_c
 \end{align}
@@ -1668,7 +1668,7 @@ A_d=\frac{v_o}{v_d}=g_m R_D
 \ابتدا{مثال}\شناخت{مثال_تفرقی_درکار_زیادہ_سے_زیادہ_داخلی_برقی_دباو}
 شکل \حوالہ{شکل_تفرقی_ماسفیٹ_بنیادی_تفرقی_جوڑا} میں دکھائے گئے ماسفیٹ کے تفرقی جوڑے میں \عددی{2I=\SI{200}{\micro \ampere}} ہے جبکہ \عددی{k_n=\SI[per=frac,fraction=nice]{0.1}{\milli \ampere \per \volt \squared}} اور \عددی{V_t=\SI{1.2}{\volt}} ہیں۔\عددیء{V_{GS}}، \عددیء{g_m} حاصل کرتے ہوئے \عددی{v_d} کی وہ قیمت حاصل کریں جس پر تمام کی تمام برقی رو ایک ماسفیٹ منتقل ہو جاتی ہے۔
 م
-حل:\عددی{v_d=0} پر دونوں ماسفیٹ اپنے نکتہ کارکردگی پر ہوتے ہیں اور دونوں میں برابر \عددی{\SI{100}{\micro \ampere}} برقی رو پایا جاتا ہے۔افزائندہ ماسفیٹ کی مساوات سے یوں
+حل:\عددی{v_d=0} پر دونوں ماسفیٹ اپنے نقطہ کارکردگی پر ہوتے ہیں اور دونوں میں برابر \عددی{\SI{100}{\micro \ampere}} برقی رو پایا جاتا ہے۔افزائندہ ماسفیٹ کی مساوات سے یوں
 \begin{align*}
 100 \times 10^{-6}&=\frac{0.1 \times 10^{-3}}{2} \left(V_{GS}-1.2 \right)^2
 \end{align*}
