--- a/tex/electronicsFilters.tex
+++ b/tex/electronicsFilters.tex
@@ -36,7 +36,7 @@ B_n(s)&=\left(s+\omega_0 \right)\left(s^2+2 \zeta_1 \omega_0 s+\omega_0^2 \right
 
 آئیں بٹر ورت تسلسل میں \عددیء{s} کی وہ قیمتیں حاصل کریں جن پر \عددیء{B_n(s)} کی قیمت صفر ہو جاتی  ہے۔\عددیء{s} کی یہ قیمتیں تسلسل کے \موٹا{صفر}\فرہنگ{صفر}\حاشیہب{zeros}\فرہنگ{zeros} کہلاتے ہیں۔
 
-\عددیء{s+\omega_0=0} سے \عددیء{s=-\omega_0} حاصل ہوتا ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_تسلسل_کے_صفر} الف میں \موٹا{مخلوط سطح}\فرہنگ{مخلوط سطح}\حاشیہب{complex plane}\فرہنگ{complex plane} پر اس نکتے کو دکھایا گیا ہے۔مخلوط سطح کے افقی محور پر حقیقی اعداد جبکہ اس کے عمودی محور پر خیالی اعداد پائے جاتے ہیں۔یوں \عددیء{s=\sigma+j \omega} لکھتے ہوئے \عددیء{\sigma} کو افقی جبکہ \عددیء{j \omega} کو عمودی محور پر رکھا جائے گا۔
+\عددیء{s+\omega_0=0} سے \عددیء{s=-\omega_0} حاصل ہوتا ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_تسلسل_کے_صفر} الف میں \موٹا{مخلوط سطح}\فرہنگ{مخلوط سطح}\حاشیہب{complex plane}\فرہنگ{complex plane} پر اس نقطے کو دکھایا گیا ہے۔مخلوط سطح کے افقی محور پر حقیقی اعداد جبکہ اس کے عمودی محور پر خیالی اعداد پائے جاتے ہیں۔یوں \عددیء{s=\sigma+j \omega} لکھتے ہوئے \عددیء{\sigma} کو افقی جبکہ \عددیء{j \omega} کو عمودی محور پر رکھا جائے گا۔
 
 دو درجی قلیات
 \begin{align}\label{مساوات_تعددی_ردعمل_دو_درجی_عمومی_جزو}
@@ -63,7 +63,7 @@ s_m=-\zeta_m \omega_0 +j \omega_0 \sqrt{1-\zeta_m^2}= \abs {s_m} \phase \theta
 \begin{align}\label{مساوات_تعددی_ردعمل_صفر_حتمی_فاصلہ}
 \abs{s_m}&=\sqrt{\zeta_m^2 \omega_0^2 +\omega_0^2\left(1 -\zeta_m^2\right)}=\omega_0
 \end{align}
-کے برابر ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_تسلسل_کے_صفر} ب میں نکتہ  \عددیء{s_m} سے  نکتہ \عددیء{o} تک کا فاصلہ \عددیء{\abs{s_m}} یعنی اس کی حتمی قیمت دکھلاتا ہے۔اس شکل میں زاویہ \عددیء{\phase{\theta_m}} دکھایا گیا ہے۔شکل کو دیکھتے ہوئے
+کے برابر ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_تسلسل_کے_صفر} ب میں نقطہ  \عددیء{s_m} سے  نقطہ \عددیء{o} تک کا فاصلہ \عددیء{\abs{s_m}} یعنی اس کی حتمی قیمت دکھلاتا ہے۔اس شکل میں زاویہ \عددیء{\phase{\theta_m}} دکھایا گیا ہے۔شکل کو دیکھتے ہوئے
 \begin{align}\label{مساوات_تعددی_ردعمل_دھیماپن_کا_حصول}
 \cos \theta_m=\frac{\zeta_m \omega_0}{\omega_0}=\zeta_m
 \end{align}
