--- a/tex/electronicsFrequencyResponse.tex
+++ b/tex/electronicsFrequencyResponse.tex
@@ -18,7 +18,7 @@ B=f_H - f_L
 \begin{align} \label{مساوات_تعددی_ردعمل_دائرہ_کارکردگی_الف}
 B \approx f_H
 \end{align}
-مشترکہ ایمٹر ٹرانزسٹر ایمپلیفائر تک داخلی اشارے کی رسائی عموماً بذریعہ \موٹا{جفتی کپیسٹر}\فرہنگ{کپیسٹر!جفتی}\فرہنگ{coupling capacitor} \عددیء{C_B}\حاشیہب{coupling capacitor} کی جاتی ہے جبکہ اس سے خارجی اشارے کی حصولی عموماً بذریعہ جفتی کپیسٹر \عددی{C_C}  کی جاتی ہے۔مزید یہ کہ \موٹا{قصری کپیسٹر}\فرہنگ{کپیسٹر!قصری}\حاشیہب{bypass capacitor}\فرہنگ{bypass capacitor}  \عددی{C_E} اشارے کو مزاحمت \عددی{R_E} کے متبادل راستہ فراہم کرتے ہوئے افزائش بڑھاتا ہے۔اس باب کے پہلے چند حصوں میں ان کپیسٹروں کا \موٹا{پست انقطاعی تعدد} کے ساتھ تعلق پر غور کیا جائے گا۔کم تعدد پر ان کپیسٹروں کی برقی رکاوٹ بڑھ جاتی ہے جس کی وجہ سے \عددی{A_v} ( \عددی{A_i} )  کی قیمت گھٹتی ہے۔یوں یہی بیرونی\حاشیہد{\عددیء{C_B}، \عددیء{C_E}، \عددی{C_C} وغیرہ بیرونی کپیسٹر ہیں جنہیں ٹرانزسٹر کے ساتھ جوڑا جاتا ہے} کپیسٹر پست انقطاعی تعدد \عددی{f_L} کی قیمت  تعین کرتے ہیں۔حقیقت میں پست انقطاعی تعدد \عددی{f_L} کا دارومدار کپیسٹر \عددی{C_E} پر ہوتا ہے۔بلند تعدد پر ان تمام بیرونی کپیسٹروں کی برقی رکاوٹ نہایت کم ہو جاتی ہے اور انہیں قصر دور تصور کیا جاتا ہے۔مثال \حوالہ{مثال_تعددی_رد_عمل_بیرونی_کپیسٹر_بلند_انقطاعی_نکتہ} میں بیرونی نسب کپیسٹر کی وجہ سے پیدا \موٹا{بلند انقطاعی نکتہ} دکھایا گیا ہے۔
+مشترکہ ایمٹر ٹرانزسٹر ایمپلیفائر تک داخلی اشارے کی رسائی عموماً بذریعہ \موٹا{جفتی کپیسٹر}\فرہنگ{کپیسٹر!جفتی}\فرہنگ{coupling capacitor} \عددیء{C_B}\حاشیہب{coupling capacitor} کی جاتی ہے جبکہ اس سے خارجی اشارے کی حصولی عموماً بذریعہ جفتی کپیسٹر \عددی{C_C}  کی جاتی ہے۔مزید یہ کہ \موٹا{قصری کپیسٹر}\فرہنگ{کپیسٹر!قصری}\حاشیہب{bypass capacitor}\فرہنگ{bypass capacitor}  \عددی{C_E} اشارے کو مزاحمت \عددی{R_E} کے متبادل راستہ فراہم کرتے ہوئے افزائش بڑھاتا ہے۔اس باب کے پہلے چند حصوں میں ان کپیسٹروں کا \موٹا{پست انقطاعی تعدد} کے ساتھ تعلق پر غور کیا جائے گا۔کم تعدد پر ان کپیسٹروں کی برقی رکاوٹ بڑھ جاتی ہے جس کی وجہ سے \عددی{A_v} ( \عددی{A_i} )  کی قیمت گھٹتی ہے۔یوں یہی بیرونی\حاشیہد{\عددیء{C_B}، \عددیء{C_E}، \عددی{C_C} وغیرہ بیرونی کپیسٹر ہیں جنہیں ٹرانزسٹر کے ساتھ جوڑا جاتا ہے} کپیسٹر پست انقطاعی تعدد \عددی{f_L} کی قیمت  تعین کرتے ہیں۔حقیقت میں پست انقطاعی تعدد \عددی{f_L} کا دارومدار کپیسٹر \عددی{C_E} پر ہوتا ہے۔بلند تعدد پر ان تمام بیرونی کپیسٹروں کی برقی رکاوٹ نہایت کم ہو جاتی ہے اور انہیں قصر دور تصور کیا جاتا ہے۔مثال \حوالہ{مثال_تعددی_رد_عمل_بیرونی_کپیسٹر_بلند_انقطاعی_نقطہ} میں بیرونی نسب کپیسٹر کی وجہ سے پیدا \موٹا{بلند انقطاعی نکتہ} دکھایا گیا ہے۔
 
 ٹرانزسٹر کے \عددی{B-E}  اور \عددی{B-C} جوڑ پر اندرونی کپیسٹر \عددی{C_{b'e}} اور \عددی{C_{b'c}} پائے جاتے ہیں۔درمیانی تعدد اور اس سے کم تعدد پر ان اندرونی کپیسٹروں کی برقی رکاوٹ اتنی زیادہ ہوتی ہے کہ انہیں کھلے دور تصور کیا جاتا ہے۔بلند تعدد پر ان کی برقی رکاوٹ کم ہو جاتی ہے اور انہیں نظرانداز کرنا ممکن نہیں رہتا۔انہیں اندرونی کپیسٹروں کی وجہ سے بلند تعدد پر \عددی{A_v} ( \عددی{A_i})  کی قیمت گھٹتی ہے۔یوں اندرونی کپیسٹر بلند انقطاعی تعدد \عددی{f_H} کی قیمت تعین کرتے ہیں۔
 
@@ -26,14 +26,14 @@ B \approx f_H
 
 اس باب میں تمام مساوات \موٹا{لاپلاس بدل}\فرہنگ{لاپلاس بدل}\حاشیہب{Laplace transform}\فرہنگ{Laplace transform}  استعمال کرتے ہوئے \عددی{s} کے ساتھ لکھے جائیں گے۔سائن نما اشارات کے لئے \عددی{s}  کی جگہ \عددی{j \omega} لکھتے ہوئے جوابات حاصل کئے جاتے ہیں۔
 	
-\حصہ{بیس  سرے پر کپیسٹر \عددی{C_B}}ایمپلیفائر استعمال کرتے وقت اس کے داخلی اور خارجی جانب مختلف چیزیں جوڑی جا سکتی ہیں مثلاً لاوڈ سپیکر یا دوسرا ایمپلیفائر۔ایسی بیرونی اشیاء جوڑتے وقت یہ ضروری ہے کہ ٹرانزسٹر کا نکتہ کارکردگی اپنی جگہ برقرار رہے۔کپیسٹر یک سمتی برقی رو کے لئے کھلے سرے کردار ادا کرتا ہے لہٰذا کپیسٹر کے ذریعہ ایمپلیفائر کو داخلی جانب اشارہ فراہم کرنے یا ایمپلیفائر کے خارجی جانب سے کپیسٹر کے ذریعہ اشارہ حاصل کرنے سے ٹرانزسٹر کے نکتہ کارکردگی پر کوئی اثر نہیں ہوتا۔
+\حصہ{بیس  سرے پر کپیسٹر \عددی{C_B}}ایمپلیفائر استعمال کرتے وقت اس کے داخلی اور خارجی جانب مختلف چیزیں جوڑی جا سکتی ہیں مثلاً لاوڈ سپیکر یا دوسرا ایمپلیفائر۔ایسی بیرونی اشیاء جوڑتے وقت یہ ضروری ہے کہ ٹرانزسٹر کا نقطہ کارکردگی اپنی جگہ برقرار رہے۔کپیسٹر یک سمتی برقی رو کے لئے کھلے سرے کردار ادا کرتا ہے لہٰذا کپیسٹر کے ذریعہ ایمپلیفائر کو داخلی جانب اشارہ فراہم کرنے یا ایمپلیفائر کے خارجی جانب سے کپیسٹر کے ذریعہ اشارہ حاصل کرنے سے ٹرانزسٹر کے نقطہ کارکردگی پر کوئی اثر نہیں ہوتا۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{amplifierWithCB}
 \caption{کپیسٹر \عددی{C_B} کا کردار}
 \label{شکل_قابو_کپیسٹر_کا_کردار}
 \end{figure}
-شکل \حوالہ{شکل_قابو_کپیسٹر_کا_کردار} الف میں ایسا ہی کرتے ہوئے کپیسٹر \عددی{C_B} کے ذریعہ داخلی اشارے کو ایمپلیفائر تک پہنچایا گیا ہے۔\عددی{C_B} پر توجہ رکھنے کی خاطر شکل میں \عددی{C_E} اور \عددی{C_C} نہیں استعمال کئے گئے۔شکل \حوالہ{شکل_قابو_کپیسٹر_کا_کردار} ب میں اسی کا مساوی باریک اشاراتی دور دکھایا گیا ہے جہاں نکتہ دار دائرے میں بند کل مزاحمت کو \عددی{R_{m1}} لکھا گیا ہے یعنی
+شکل \حوالہ{شکل_قابو_کپیسٹر_کا_کردار} الف میں ایسا ہی کرتے ہوئے کپیسٹر \عددی{C_B} کے ذریعہ داخلی اشارے کو ایمپلیفائر تک پہنچایا گیا ہے۔\عددی{C_B} پر توجہ رکھنے کی خاطر شکل میں \عددی{C_E} اور \عددی{C_C} نہیں استعمال کئے گئے۔شکل \حوالہ{شکل_قابو_کپیسٹر_کا_کردار} ب میں اسی کا مساوی باریک اشاراتی دور دکھایا گیا ہے جہاں نقطہ دار دائرے میں بند کل مزاحمت کو \عددی{R_{m1}} لکھا گیا ہے یعنی
 \begin{align*}
 \frac{1}{R_{m1}}=\frac{1}{R_1}+\frac{1}{R_2}+\frac{1}{r_{be}+\left(\beta+1 \right)R_E}
 \end{align*}
@@ -195,7 +195,7 @@ A_v &=\frac{-4.79463}{1 + \frac{1}{j \times 2 \times \pi \times 1 \times 10^{3} 
 \caption{ پست انقطاعی تعدد}
 \label{شکل_پست_انقطاعی_تعدد_الف}
 \end{figure}
-شکل کو دیکھتے ہوئےہم کہہ سکتے ہیں کہ کم تعدد پر یہ ایمپلیفائر داخلی اشارہ کو نہیں بڑھائے گا۔تعدد بتدریج کم کرتے ہوئے، جس تعدد پر افزائش کی قیمت کم ہوتے ہوتے \عددی{\abs{A_{vD}}} کے \عددی{\frac{1}{\sqrt{2}}} گنا ہو جائے اسی کو انقطاعی نکتہ  تصور کیا جاتا ہے۔شکل  \حوالہ{شکل_پست_انقطاعی_تعدد_الف} میں \عددی{f=\SI{6360}{\hertz}} پر \عددی{\abs{A_v}=\frac{\abs{A_{vD}}}{\sqrt{2}}} ہو جاتا ہے۔یوں ہم کہیں گے کہ یہ ایمپلیفائر  \عددی{\SI{6360}{\hertz}} سے کم تعدد کے اشارات کو نہیں بڑھاتا۔جیسا کہ پہلے ذکر کیا گیا، زیادہ تعدد پر بھی ایمپلیفائر کی افزائش کم ہوجاتی ہے یوں موجودہ نقطے کا پورا نام \موٹا{پست انقطاعی نکتہ} ہے جبکہ اس نقطے پر تعدد \عددی{f_L} کو \موٹا{پست انقطاعی تعدد}\فرہنگ{پست انقطاعی تعدد}\حاشیہب{low cut-off frequency}  پکارا جاتا ہے۔
+شکل کو دیکھتے ہوئےہم کہہ سکتے ہیں کہ کم تعدد پر یہ ایمپلیفائر داخلی اشارہ کو نہیں بڑھائے گا۔تعدد بتدریج کم کرتے ہوئے، جس تعدد پر افزائش کی قیمت کم ہوتے ہوتے \عددی{\abs{A_{vD}}} کے \عددی{\frac{1}{\sqrt{2}}} گنا ہو جائے اسی کو انقطاعی نقطہ  تصور کیا جاتا ہے۔شکل  \حوالہ{شکل_پست_انقطاعی_تعدد_الف} میں \عددی{f=\SI{6360}{\hertz}} پر \عددی{\abs{A_v}=\frac{\abs{A_{vD}}}{\sqrt{2}}} ہو جاتا ہے۔یوں ہم کہیں گے کہ یہ ایمپلیفائر  \عددی{\SI{6360}{\hertz}} سے کم تعدد کے اشارات کو نہیں بڑھاتا۔جیسا کہ پہلے ذکر کیا گیا، زیادہ تعدد پر بھی ایمپلیفائر کی افزائش کم ہوجاتی ہے یوں موجودہ نقطے کا پورا نام \موٹا{پست انقطاعی نکتہ} ہے جبکہ اس نقطے پر تعدد \عددی{f_L} کو \موٹا{پست انقطاعی تعدد}\فرہنگ{پست انقطاعی تعدد}\حاشیہب{low cut-off frequency}  پکارا جاتا ہے۔
 
 
 مساوات \حوالہ{مساوات_تعددی_ردعمل_قابو_کپیسٹر_حیطہ_اور_زاویہ} سے ہم پست انقطاعی تعدد حاصل کر سکتے ہیں۔ایسا کرنے کی خاطر اس تعدد کو \عددی{\omega_L} لکھتے ہوئے مساوات کو \عددی{\abs{A_v}=\frac{\abs{A_{vD}}}{\sqrt{2}}} (یعنی درمیانی تعدد پر افزائش سے \عددی{\SI{3}{dB}}  کم ) کے لئے حل کرتے ہیں
@@ -236,7 +236,7 @@ C_B&=\frac{1}{2 \pi f_L \left(R_{mCB} \right ) }\\
 \انتہا{مثال}
 %=========
 \حصہ{ایمٹر سرے پر کپیسٹر \عددی{C_E}}
-ٹرانزسٹر کا نکتہ کارکردگی تعین کرنے کے علاوہ \عددی{\beta}  میں تبدیلی سے  نکتہ کارکردگی میں تبدیلی رونما ہونے کو \عددی{R_E} کے استعمال سے کم کیا جاتا ہے۔البتہ ایمپلیفائر کی افزائش بڑھانے کے  لئے یہ ضروری ہے کہ ٹرانزسٹر کے ایمٹر سرے پر کم سے کم مزاحمت ہو۔ان دو متضاد شرائط پر پورا اترتا دور شکل \حوالہ{شکل_مخارج_کپیسٹر_کا_کردار} الف میں دکھایا گیا ہے۔چونکہ کپیسٹر \عددی{C_E} یک سمتی برقی رو کے لئے کھلے دور کا کردار ادا کرتا ہے لہٰذا اس کے استعمال سے یک سمتی متغیرات متاثر نہیں ہوتے۔\عددی{C_E} کو یوں چنا جاتا ہے کہ درکار تعدد پر اس کی \موٹا{برقی رکاوٹ}\فرہنگ{برقی!رکاوٹ}\حاشیہب{impedance} \عددی{R_E} سے کم ہو۔چونکہ \عددی{C_E} مزاحمت \عددی{R_E} کے متوازی جڑا ہے لہٰذا بدلتی رو کے نقطہ نظر سے ٹرانزسٹر کے ایمٹر پر کل رکاوٹ \عددی{R_E} سے کم ہو جاتی ہے اور یوں افزائش بڑھتی ہے۔اس حصے میں \عددی{C_E} پر توجہ رکھنے کی خاطر \عددی{C_B} اور \عددی{C_C} کا استعمال نہیں کیا گیا۔
+ٹرانزسٹر کا نقطہ کارکردگی تعین کرنے کے علاوہ \عددی{\beta}  میں تبدیلی سے  نقطہ کارکردگی میں تبدیلی رونما ہونے کو \عددی{R_E} کے استعمال سے کم کیا جاتا ہے۔البتہ ایمپلیفائر کی افزائش بڑھانے کے  لئے یہ ضروری ہے کہ ٹرانزسٹر کے ایمٹر سرے پر کم سے کم مزاحمت ہو۔ان دو متضاد شرائط پر پورا اترتا دور شکل \حوالہ{شکل_مخارج_کپیسٹر_کا_کردار} الف میں دکھایا گیا ہے۔چونکہ کپیسٹر \عددی{C_E} یک سمتی برقی رو کے لئے کھلے دور کا کردار ادا کرتا ہے لہٰذا اس کے استعمال سے یک سمتی متغیرات متاثر نہیں ہوتے۔\عددی{C_E} کو یوں چنا جاتا ہے کہ درکار تعدد پر اس کی \موٹا{برقی رکاوٹ}\فرہنگ{برقی!رکاوٹ}\حاشیہب{impedance} \عددی{R_E} سے کم ہو۔چونکہ \عددی{C_E} مزاحمت \عددی{R_E} کے متوازی جڑا ہے لہٰذا بدلتی رو کے نقطہ نظر سے ٹرانزسٹر کے ایمٹر پر کل رکاوٹ \عددی{R_E} سے کم ہو جاتی ہے اور یوں افزائش بڑھتی ہے۔اس حصے میں \عددی{C_E} پر توجہ رکھنے کی خاطر \عددی{C_B} اور \عددی{C_C} کا استعمال نہیں کیا گیا۔
 
 شکل \حوالہ{شکل_مخارج_کپیسٹر_کا_کردار} ب میں شکل \حوالہ{شکل_مخارج_کپیسٹر_کا_کردار} الف کا مساوی باریک اشاراتی دور دکھایا گیا ہے جس سے ہم افزائش کی مساوات لکھ سکتے ہیں۔باریک اشاراتی دور میں بیس  جانب کے مزاحمت کے عکس ایمٹر جانب دکھائے گئے ہیں۔جیسا کہ آپ جانتے ہیں کہ ایمٹر جانب کے مزاحمت کا عکس،  بیس  جانب \عددی{(\beta+1)} گنا زیادہ نظر آتا ہے جبکہ بیس  جانب مزاحمت کا عکس، ایمٹر جانب \عددی{(\beta+1)} گنا کم نظر آتا ہے۔یوں بیس  جانب کے مزاحمت \عددی{R_B} اور \عددی{r_{be}} کے عکس، ایمٹر جانب \عددی{\frac{R_B}{\beta+1}} اور \عددی{\frac{r_{be}}{\beta+1}} نظر آئیں گے۔
 \begin{gather} \label{مساوات_تعددی_ردعمل_مخارج_کپیسٹر_کا_کردار}
@@ -502,7 +502,7 @@ A_v& =A_{vD} \left(\frac{j f +f_1}{j f +f_2} \right)\\
 
 \عددی{20 \log \frac{f}{100}} کی قیمت \عددیء{100}، \عددیء{1000}، \عددی{10000} اور \عددی{100000} کے تعدد پر \عددیء{0}، \عددیء{20}، \عددی{40} اور \عددی{60} ڈیسی بیل حاصل ہوتی ہے۔اس حقیقت کو یوں بیان کیا جا سکتا ہے کہ تعدد دس گنّا کرنے سے افزائش \عددی{\SI{20}{dB}} بڑھتی ہے یا کہ افزائش  \عددی{\SI{20}{dB}} فی دہائی کے شرح سے بڑھتی ہے۔ افقی محور پر تعدد کا لاگ لیتے ہوئے ان قیمتوں کے استعمال سے خط کھینچا گیا ہے۔یہ خط تعدد کے محور کو \عددی{f_1} یعنی \عددی{\log(100)=2} پر چھوتے ہوئے \عددی{\SI{20}{dB}} فی دہائی کے شرح سے بڑھتا ہے۔ایسا خط کھینچتے وقت \عددی{(f_1, \SI{0}{dB})}  اور  \عددی{(10 f_1, \SI{20}{dB})} کے مقام پر نقطے  لگا کر انہیں سیدھی لکیر سے جوڑتے ہوئے حاصل کیا جاتا ہے۔
 
-شکل \حوالہ{شکل_تعددی_ردعمل_بوڈا_اجزاء_الف} الف میں \عددی{(f_1, \SI{0}{dB})} یعنی \عددی{(10^2, \SI{0}{dB})} پر نکتہ \عددی{a} اور \عددی{(10 f_1, \SI{20}{dB})} یعنی \عددی{(10^3,\SI{20}{dB})} پر نکتہ \عددی{b} دکھائے گئے ہیں۔نہایت کم تعدد پر مساوات \حوالہ{مساوات_تعدد_ردعمل_بوڈا_کم_تعدد_حصہ} کے مطابق اس جزو کی قیمت \عددی{\SI{0}{dB}} ہے۔حقیقت میں بوڈا خط کھینچتے وقت کم تعدد کو \عددی{f \ll f_1} کی بجائے \عددی{f \le f_1} لیا جاتا ہے۔یوں نکتہ \عددی{a} سے کم تعدد پر اس جزو کی قیمت \عددی{\SI{0}{dB}} دکھائی گئی ہے۔اس طرح بوڈا خط کھینچتے ہوئے  نہایت زیادہ تعدد کو \عددی{f \gg f_1} کی بجائے \عددی{f \ge f_1} لیا جاتا ہے۔ یوں اگر \عددی{a} پر \عددی{\SI{0}{dB}} ہو تب دس گنا زیادہ تعدد پر \عددی{\SI{20}{dB}} ہو گا۔اس نقطے  کو \عددی{b} سے ظاہر کیا گیا ہے۔\عددی{a} تک \عددی{\SI{0}{dB}} پر رہتا ہوا اور \عددی{a} اور \عددی{b} سے گزرتا سیدھا خط دوسرے جزو کا \موٹا{بوڈا خط} ہے۔
+شکل \حوالہ{شکل_تعددی_ردعمل_بوڈا_اجزاء_الف} الف میں \عددی{(f_1, \SI{0}{dB})} یعنی \عددی{(10^2, \SI{0}{dB})} پر نقطہ \عددی{a} اور \عددی{(10 f_1, \SI{20}{dB})} یعنی \عددی{(10^3,\SI{20}{dB})} پر نقطہ \عددی{b} دکھائے گئے ہیں۔نہایت کم تعدد پر مساوات \حوالہ{مساوات_تعدد_ردعمل_بوڈا_کم_تعدد_حصہ} کے مطابق اس جزو کی قیمت \عددی{\SI{0}{dB}} ہے۔حقیقت میں بوڈا خط کھینچتے وقت کم تعدد کو \عددی{f \ll f_1} کی بجائے \عددی{f \le f_1} لیا جاتا ہے۔یوں نقطہ \عددی{a} سے کم تعدد پر اس جزو کی قیمت \عددی{\SI{0}{dB}} دکھائی گئی ہے۔اس طرح بوڈا خط کھینچتے ہوئے  نہایت زیادہ تعدد کو \عددی{f \gg f_1} کی بجائے \عددی{f \ge f_1} لیا جاتا ہے۔ یوں اگر \عددی{a} پر \عددی{\SI{0}{dB}} ہو تب دس گنا زیادہ تعدد پر \عددی{\SI{20}{dB}} ہو گا۔اس نقطے  کو \عددی{b} سے ظاہر کیا گیا ہے۔\عددی{a} تک \عددی{\SI{0}{dB}} پر رہتا ہوا اور \عددی{a} اور \عددی{b} سے گزرتا سیدھا خط دوسرے جزو کا \موٹا{بوڈا خط} ہے۔
 
 
 مساوات \حوالہ{مساوات_تعددی_ردعمل_بوڈا_خط_حیطہ} کے تیسرے جزو  کی کارکردگی نہایت کم اور نہایت زیادہ تعدد پر دیکھتے ہیں۔نہایت کم تعدد یعنی \عددی{f \ll f_2} پر
@@ -520,7 +520,7 @@ A_v& =A_{vD} \left(\frac{j f +f_1}{j f +f_2} \right)\\
 
 \عددی{-20 \log \frac{f}{10000}} کی قیمت \عددیء{10000}، \عددیء{100000}، \عددی{1000000} اور \عددی{10000000} کے تعدد پر \عددیء{0}، \عددیء{-20}، \عددی{-40} اور \عددی{-60} ڈیسی بیل حاصل ہوتی ہے۔اس حقیقت کو یوں بیان کیا جا سکتا ہے کہ تعدد دس گنّا کرنے سے افزائش \عددی{\SI{20}{dB}} گھٹتی ہے یا کہ افزائش  \عددی{\SI{-20}{dB}} فی دہائی کے شرح سے تبدیل ہوتی ہے۔ افقی محور پر تعدد کا لاگ لیتے ہوئے ان قیمتوں کے استعمال سے خط کھینچا گیا ہے۔یہ خط تعدد کے محور کو \عددی{f_2} یعنی \عددی{\log(10000)=4} پر چھوتے ہوئے \عددی{\SI{-20}{dB}} فی دہائی کے شرح سے تبدیل ہوتا ہے۔ایسا خط کھینچتے وقت \عددی{f_2} تعدد پر \عددی{\SI{0}{dB}} اور \عددی{10 f_2} تعدد پر \عددی{\SI{-20}{dB}}  کے مقام پر نقطے  لگا کر انہیں سیدھی لکیر سے جوڑتے ہوئے حاصل کیا جاتا ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_بوڈا_اجزاء_الف} الف  میں ان نقطوں کو \عددی{c} اور \عددی{d} سے ظاہر کیا گیا ہے۔یاد رہے کہ \عددی{f_2} یعنی \عددی{10^4} سے کم تعدد پر اس جزو کی قیمت \عددی{\SI{0}{dB}} ہے۔
 
-شکل \حوالہ{شکل_تعددی_ردعمل_بوڈا_اجزاء_الف} ب میں ان تینوں خطوط کا مجموعہ لیا گیا ہے جو کہ مساوات  \حوالہ{مساوات_تعددی_ردعمل_بوڈا_جزو_مثال} کے \عددی{\abs{A_v}} کا مکمل \موٹا{بوڈا خط} ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_بوڈا_اجزاء_الف} الف میں نکتہ \عددی{a} پر  مساوات \حوالہ{مساوات_تعددی_ردعمل_بوڈا_خط_حیطہ} کے پہلے جزو کے خط کی قیمت \عددی{\SI{5}{dB}} جبکہ بقایا دو اجزاء کے قیمتیں \عددی{\SI{0}{dB}} ہیں۔یوں ان کا مجموعہ \عددی{\SI{5}{dB}} ہے جسے شکل \حوالہ{شکل_تعددی_ردعمل_بوڈا_اجزاء_الف} ب میں  \عددی{a'} سے ظاہر کیا گیا ہے۔\عددی{b} پر ان تین اجزاء کے قیمتیں \عددیء{\SI{5}{dB}}، \عددی{\SI{20}{dB}} اور \عددی{\SI{0}{dB}} ہیں جن کے مجموعہ \عددی{\SI{25}{dB}} کو \عددی{b'} سے ظاہر کیا گیا ہے۔\عددی{c} پر تینوں کا مجموعہ \عددی{\SI{45}{dB}} کو \عددی{c'} سے ظاہر کیا گیا ہے۔\عددی{d} پر تین اجزاء کے قیمتیں \عددیء{\SI{5}{dB}}، \عددی{\SI{60}{dB}} اور \عددی{\SI{-20}{dB}} ہیں جن کا مجموعہ \عددی{\SI{45}{dB}} ہی ہے۔اس نقطے  کو \عددی{d'} سے ظاہر کیا گیا ہے۔
+شکل \حوالہ{شکل_تعددی_ردعمل_بوڈا_اجزاء_الف} ب میں ان تینوں خطوط کا مجموعہ لیا گیا ہے جو کہ مساوات  \حوالہ{مساوات_تعددی_ردعمل_بوڈا_جزو_مثال} کے \عددی{\abs{A_v}} کا مکمل \موٹا{بوڈا خط} ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_بوڈا_اجزاء_الف} الف میں نقطہ \عددی{a} پر  مساوات \حوالہ{مساوات_تعددی_ردعمل_بوڈا_خط_حیطہ} کے پہلے جزو کے خط کی قیمت \عددی{\SI{5}{dB}} جبکہ بقایا دو اجزاء کے قیمتیں \عددی{\SI{0}{dB}} ہیں۔یوں ان کا مجموعہ \عددی{\SI{5}{dB}} ہے جسے شکل \حوالہ{شکل_تعددی_ردعمل_بوڈا_اجزاء_الف} ب میں  \عددی{a'} سے ظاہر کیا گیا ہے۔\عددی{b} پر ان تین اجزاء کے قیمتیں \عددیء{\SI{5}{dB}}، \عددی{\SI{20}{dB}} اور \عددی{\SI{0}{dB}} ہیں جن کے مجموعہ \عددی{\SI{25}{dB}} کو \عددی{b'} سے ظاہر کیا گیا ہے۔\عددی{c} پر تینوں کا مجموعہ \عددی{\SI{45}{dB}} کو \عددی{c'} سے ظاہر کیا گیا ہے۔\عددی{d} پر تین اجزاء کے قیمتیں \عددیء{\SI{5}{dB}}، \عددی{\SI{60}{dB}} اور \عددی{\SI{-20}{dB}} ہیں جن کا مجموعہ \عددی{\SI{45}{dB}} ہی ہے۔اس نقطے  کو \عددی{d'} سے ظاہر کیا گیا ہے۔
 
 مندرجہ بالا تمام عمل کو نہایت آسانی سے یوں سرانجام دیا جا سکتا ہے۔دئے گئے مساوات کی حتمی قیمت کمتر تعدد پر  حاصل کریں۔بوڈا خط کی قیمت یہی رکھتے ہوئے تعدد بڑھائیں حتٰی کہ مساوات کا \موٹا{صفر} یا \موٹا{قطب} آ جائے۔اگر \موٹا{صفر} آ جائے تو بوڈا خط کی قیمت \عددی{\SI{20}{dB}} فی دہائی کی شرح سے بڑھانا شروع کر دیں اور اگر \موٹا{قطب} آ جائے تو بوڈا خط کی قیمت \عددی{\SI{20}{dB}} فی دہائی کی شرح سے گھٹانا شروع کر دیں۔تعدد بڑھاتے رہیں حتٰی کہ مساوات کا اگلا \موٹا{صفر} یا \موٹا{قطب} آ جائے۔ہر مرتبہ \موٹا{صفر} آنے پر بوڈا خط کے تبدیلی کی شرح میں \عددی{\SI{20}{dB}} کا اضافہ لائیں جبکہ \موٹا{قطب} آنے پر بوڈا خط کے تبدیلی کی شرح میں \عددی{\SI{20}{dB}} کی کمی لائیں۔
 \begin{figure}
@@ -668,7 +668,7 @@ R_1=\SI{2.2}{\kilo \ohm}, R_2=\SI{16}{\kilo \ohm}, R_s=\SI{1}{\kilo \ohm}\\
 \end{itemize}
 
 حل:
-نکتہ کارکردگی حاصل کرتے وقت تمام کپیسٹر کھلے سرے کردار ادا کرتے ہیں۔مسئلہ تھونن کی مدد سے \عددی{R_{th}=\SI{1.934}{\kilo \ohm}} جبکہ \عددی{V_{th}=\SI{1.0879}{\volt}} حاصل ہوتے ہیں جن سے \عددیء{I_{CQ}=\SI{1.768}{\milli \ampere}}، \عددی{g_m=\SI{0.071}{\milli \siemens}} اور \عددی{r_{be}=\SI{1.394}{\kilo \ohm}} حاصل ہوتے ہیں۔یوں \عددی{R_{m1}=\SI{810}{\ohm}} حاصل ہوتا ہے۔
+نقطہ کارکردگی حاصل کرتے وقت تمام کپیسٹر کھلے سرے کردار ادا کرتے ہیں۔مسئلہ تھونن کی مدد سے \عددی{R_{th}=\SI{1.934}{\kilo \ohm}} جبکہ \عددی{V_{th}=\SI{1.0879}{\volt}} حاصل ہوتے ہیں جن سے \عددیء{I_{CQ}=\SI{1.768}{\milli \ampere}}، \عددی{g_m=\SI{0.071}{\milli \siemens}} اور \عددی{r_{be}=\SI{1.394}{\kilo \ohm}} حاصل ہوتے ہیں۔یوں \عددی{R_{m1}=\SI{810}{\ohm}} حاصل ہوتا ہے۔
 \begin{itemize}
 \item
 \begin{align*}
@@ -681,12 +681,12 @@ C_b=\frac{1}{2 \pi f_b \left(R_s+R_{m1} \right) }=\frac{1}{2 \times \pi \times 5
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{bodeMagnitudeBaseAndCollectorCapacitor}
-\caption{پست انقطاعی نکتہ زیادہ تعدد والے کونے پر ہے}
+\caption{پست انقطاعی نقطہ زیادہ تعدد والے کونے پر ہے}
 \label{شکل_تعددی_ردعمل_قابو_کپیسٹر_پست_انقطاعی_تعین}
 \end{figure}
 شکل \حوالہ{شکل_تعددی_ردعمل_قابو_کپیسٹر_پست_انقطاعی_تعین} میں بوڈا خط کھینچا گیا ہے جہاں سے واضح ہے کہ پست انقطاعی تعدد تقریباً \عددی{f_b} کے برابر ہے۔شکل میں \عددی{\SI{1}{\hertz}} تا \عددی{\SI{5}{\hertz}} بوڈا خط کی ڈھلوان \عددی{\SI{40}{dB}} فی دہائی ہے جبکہ \عددی{\SI{5}{\hertz}} تا \عددی{\SI{50}{\hertz}} اس کی ڈھلوان \عددی{\SI{20}{dB}} فی دہائی ہے۔
 
-جب بھی بوڈا خط میں پست انقطاعی نکتہ تعین کرنے والے کونوں میں سب سے زیادہ تعدد پر پائے جانے والے کونے سے بقایا کونے دور دور ہوں، ایسی صورت میں پست انقطاعی نکتہ تقریباً اسی زیادہ تعدد کے کونے پر ہو گا۔
+جب بھی بوڈا خط میں پست انقطاعی نقطہ تعین کرنے والے کونوں میں سب سے زیادہ تعدد پر پائے جانے والے کونے سے بقایا کونے دور دور ہوں، ایسی صورت میں پست انقطاعی نقطہ تقریباً اسی زیادہ تعدد کے کونے پر ہو گا۔
 
 آئیں مساوات \حوالہ{مساوات_تعددی_ردعمل_قابو_محاصل_کپیسٹر_انقطاعی_تعدد} حل کرتے دیکھیں کہ جواب کیا حاصل ہوتا ہے۔اس مساوات میں \عددی{\omega_c} اور \عددی{\omega_b} کی قیمتیں پر کرتے ملتا ہے
 \begin{align*}
@@ -711,7 +711,7 @@ f_b=\frac{f_L}{\sqrt{1+\sqrt{2}}}=\frac{50}{\sqrt{1+\sqrt{2}}}=\SI{32}{\hertz}
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{bodeMagnitudeBaseAndCollectorCapacitorA}
-\caption{جڑوا کونوں کی صورت میں پست انقطاعی نکتہ}
+\caption{جڑوا کونوں کی صورت میں پست انقطاعی نقطہ}
 \label{شکل_تعددی_ردعمل_قابو_کپیسٹر_پست_انقطاعی_تعین_الف}
 \end{figure}
 \end{itemize}
@@ -884,7 +884,7 @@ A_v&=\frac{\frac{-R_c \beta}{r_i}\left(s+\omega_c\right) s}{\left(s+\omega_{q1} 
 
 عموماً ایمپلیفائر میں \عددیء{C_B}، \عددی{C_E} اور \عددی{C_C} تینوں پائے جاتے ہیں۔ایمپلیفائر کسی مخصوص اشارے کے لئے تخلیق دئے جاتا ہے۔اشارے کی کم سے کم اور زیادہ سے زیادہ ممکنہ تعدد کو مد نظر رکھتے ہوئے ایمپلیفائر تخلیق دیا جاتا ہے۔ایمپلیفائر کی پست انقطاعی تعدد اشارے کے کم سے کم ممکنہ تعدد سے کم رکھا جاتا ہے۔یوں ایمپلیفائر پست انقطاعی تعدد تک درمیانی تعدد کی افزائش برقرار رکھتا ہے جبکہ پست انقطاعی نقطے  سے کم تعدد پر ایمپلیفائر کی کارکردگی اہمیت نہیں رکھتی چونکہ اس خطے میں اسے استعمال نہیں کیا جاتا۔
 
-\عددی{\omega_0=\frac{1}{R_m Cm}} لیتے ہوئے \عددی{C=\frac{1}{\omega_0 R_m}}  حاصل ہوتا ہے۔یوں کم \عددی{R_m} کی صورت میں \عددی{C} کی بڑی قیمت حاصل ہوتی ہے۔حقیقی ایمپلیفائر میں \عددی{C_E} کے ساتھ کل متوازی جڑی مزاحمت کی قیمت \عددی{C_B} اور \عددی{C_C} کے متوازی مزاحمتوں سے کم ہوتی ہے۔لہٰذا کسی بھی \عددی{\omega_0} کے لئے درکار \عددی{C_E} کی قیمت بقایا دو کپیسٹروں سے بڑی ہوتی ہے۔اسی لئے پست انقطاعی تعدد کو \عددی{C_E} کے مدد سے حاصل کیا جاتا ہے جبکہ \عددی{C_B} اور \عددی{C_C} سے حاصل انقطاعی نقطوں  کو اس سے کئی درجے کم تعدد پر رکھا جاتا ہے۔یوں حاصل \عددی{C_E} کی قیمت کم سے کم ہو گی۔اگر اس کے برعکس \عددی{C_B} یا \عددی{C_C} کی مدد سے درکار پست انقطاعی نکتہ حاصل کیا جائے تو اس صورت میں \عددی{C_E} سے حاصل نقطے  کو اس سے بھی کم تعدد پر رکھنا ہو گا جس سے \عددی{C_E} کی قیمت زیادہ حاصل ہو گی۔
+\عددی{\omega_0=\frac{1}{R_m Cm}} لیتے ہوئے \عددی{C=\frac{1}{\omega_0 R_m}}  حاصل ہوتا ہے۔یوں کم \عددی{R_m} کی صورت میں \عددی{C} کی بڑی قیمت حاصل ہوتی ہے۔حقیقی ایمپلیفائر میں \عددی{C_E} کے ساتھ کل متوازی جڑی مزاحمت کی قیمت \عددی{C_B} اور \عددی{C_C} کے متوازی مزاحمتوں سے کم ہوتی ہے۔لہٰذا کسی بھی \عددی{\omega_0} کے لئے درکار \عددی{C_E} کی قیمت بقایا دو کپیسٹروں سے بڑی ہوتی ہے۔اسی لئے پست انقطاعی تعدد کو \عددی{C_E} کے مدد سے حاصل کیا جاتا ہے جبکہ \عددی{C_B} اور \عددی{C_C} سے حاصل انقطاعی نقطوں  کو اس سے کئی درجے کم تعدد پر رکھا جاتا ہے۔یوں حاصل \عددی{C_E} کی قیمت کم سے کم ہو گی۔اگر اس کے برعکس \عددی{C_B} یا \عددی{C_C} کی مدد سے درکار پست انقطاعی نقطہ حاصل کیا جائے تو اس صورت میں \عددی{C_E} سے حاصل نقطے  کو اس سے بھی کم تعدد پر رکھنا ہو گا جس سے \عددی{C_E} کی قیمت زیادہ حاصل ہو گی۔
 
 آئیں ایک مثال کی مدد سے ایسے ایمپلیفائر  کا تجزیہ کریں۔
 
@@ -952,7 +952,7 @@ r_i + R_b \mathbin{\|} \left[r_{be}+R_e' \right] =\SI{60.476}{\kilo \ohm}
 ہے لہٰذا \عددی{\omega_{qb}} پر \عددی{C_e} کو کھلے دور تصور کیا جا سکتا ہے۔
 \انتہا{مثال}
 %==========
-\حصہ{ماسفیٹ کے سورس پر کپیسٹر سے حاصل کم انقطاعی تعدد}
+\حصہ{پست انقطاعی تعدد بذریعہ سورس کپیسٹر}
 شکل \حوالہ{شکل_تعددی_ردعمل_مثال_ماسفیٹ_مخارج_کپیسٹر} میں گیٹ اور کلکٹر  کپیسٹروں کی قیمت لامحدود تصور کریں۔\عددی{A_v=\tfrac{v_L}{v_i}} حاصل کرتے ہوئے پست انقطاعی تعدد \عددی{\omega_L} حاصل کرتے ہیں۔
 \begin{figure}
 \centering
@@ -1061,7 +1061,7 @@ A_{vD}=-0.004 \times 3098=\SI{-12.4}{\volt \per \volt}
 
 اب تک ہم نے جتنے بھی مثال دیکھے ان تمام میں بیرونی جڑے کپیسٹر کی وجہ سے پست انقطاعی نقطے  حاصل ہوئے۔آئیں اب ایک ایسا مثال دیکھیں جہاں بیرونی کپیسٹر کی وجہ سے زیادہ تعدد کا اشارہ متاثر ہوتا ہو۔اس مثال سے زیادہ تعدد کے مسائل بھی سامنے آئیں گے جن کا آگے تفصیلاً جائزہ لیا جائے گا۔
 
-\ابتدا{مثال}\شناخت{مثال_تعددی_رد_عمل_بیرونی_کپیسٹر_بلند_انقطاعی_نکتہ}
+\ابتدا{مثال}\شناخت{مثال_تعددی_رد_عمل_بیرونی_کپیسٹر_بلند_انقطاعی_نقطہ}
 شکل \حوالہ{شکل_تعددی_ردعمل_سوال_بار_کپیسٹر_الف} میں \عددی{A_v=\tfrac{v_L}{v_i}} کی مساوات حاصل کرتے ہوئے اس کا بوڈا خط کھینچیں۔
 \begin{figure}
 \centering
@@ -1086,7 +1086,7 @@ A_v&= - g_m \left(\frac{R_b \mathbin{\|} r_{be}}{r_i+R_b \mathbin{\|} r_{be}} \r
 \انتہا{مثال}
 %=========
 \ابتدا{مثال}
-مثال \حوالہ{مثال_تعددی_رد_عمل_بیرونی_کپیسٹر_بلند_انقطاعی_نکتہ} میں اگر داخلی اشارہ صفر وولٹ سے یکدم \عددی{\SI{20}{\milli \volt}} ہو جائے تو \عددی{v_L} نئی قیمت کے حتمی قیمت کے \عددی{\SI{90}{\percent}} کتنی دیر میں پہنچ پائے گا۔
+مثال \حوالہ{مثال_تعددی_رد_عمل_بیرونی_کپیسٹر_بلند_انقطاعی_نقطہ} میں اگر داخلی اشارہ صفر وولٹ سے یکدم \عددی{\SI{20}{\milli \volt}} ہو جائے تو \عددی{v_L} نئی قیمت کے حتمی قیمت کے \عددی{\SI{90}{\percent}} کتنی دیر میں پہنچ پائے گا۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{bodeMagnitudeHighCutoffCollectorToGroundCapacitorEquivalent}
@@ -1216,8 +1216,8 @@ C_M'=C \left(1-\frac{1}{A_V} \right)
 \end{align}
 حاصل ہوتا۔مساوات \حوالہ{مساوات_تعددی_ردعمل_ملر_کپیسٹر} کا اگلے حصے میں بار بار استعمال ہو گا۔\عددی{C_M} \موٹا{ملر کپیسٹر}\فرہنگ{ملر کپیسٹر}\فرہنگ{Miller's capacitor}\حاشیہب{Miller's capacitor} پکارا جاتا ہے۔
 
-\حصہ{بلند تعدد ردِ عمل}
-گزشتہ حصوں میں پست تعدد پر ٹرانزسٹر ایمپلیفائر کی کارکردگی دیکھی گئی جہاں ٹرانزسٹر کے ساتھ بیرونی جڑے کپیسٹروں کی وجہ سے پائے جانے والے پست انقطاعی نقطوں پر غور کیا گیا۔اس حصے میں بلند تعدد پر ایمپلیفائر کی کارکردگی دیکھی جائے گی۔بلند تعدد پر ٹرانزسٹر کے ساتھ بیرونی جڑے کپیسٹروں کی برقی رکاوٹ  \عددی{\frac{1}{\omega C}} نہایت کم ہوتی ہے اور یوں انہیں قصر دور تصور کیا جاتا ہے۔بلند تعدد پر ٹرانزسٹر کے اندرونی کپیسٹروں کی وجہ سے بلند انقطاعی نکتہ  پیدا ہوتا ہے جس پر اس حصے میں غور کیا جائے گا۔پہلے \عددی{npn} ٹرانزسٹر کو مثال بناتے ہوئے ان اندرونی کپیسٹروں پر تبصرہ کرتے ہیں۔
+\حصہ{بلند تعددی رد عمل}
+گزشتہ حصوں میں پست تعدد پر ٹرانزسٹر ایمپلیفائر کی کارکردگی دیکھی گئی جہاں ٹرانزسٹر کے ساتھ بیرونی جڑے کپیسٹروں کی وجہ سے پائے جانے والے پست انقطاعی نقطوں پر غور کیا گیا۔اس حصے میں بلند تعدد پر ایمپلیفائر کی کارکردگی دیکھی جائے گی۔بلند تعدد پر ٹرانزسٹر کے ساتھ بیرونی جڑے کپیسٹروں کی برقی رکاوٹ  \عددی{\frac{1}{\omega C}} نہایت کم ہوتی ہے اور یوں انہیں قصر دور تصور کیا جاتا ہے۔بلند تعدد پر ٹرانزسٹر کے اندرونی کپیسٹروں کی وجہ سے بلند انقطاعی نقطہ  پیدا ہوتا ہے جس پر اس حصے میں غور کیا جائے گا۔پہلے \عددی{npn} ٹرانزسٹر کو مثال بناتے ہوئے ان اندرونی کپیسٹروں پر تبصرہ کرتے ہیں۔
 
 \جزوحصہ{بلند تعددی پائے \عددی{\pi} ماڈل}\شناخت{حصہ_تعددی_ردعمل_بلند_تعددی_پائے_ماڈل}
 استعمال کے دوران ٹرانزسٹر کےبیس-ایمٹر    جوڑ  کو الٹ مائل رکھا جاتا ہے۔بالکل ڈایوڈ کی طرح،اس  الٹ مائل \عددی{pn} جوڑ پر ویران خطہ پایا جاتا ہے جس کے ایک جانب مثبت چارج جبکہ دوسری جانب منفی چارج پایا جاتا ہے۔یہ دو الٹ قسم کے چارج مل کر کپیسٹر کو جنم دیتے ہیں جسے \عددی{C_{b'c}} کی علامت سے پہچانا جاتا ہے۔اس کپیسٹر کی قیمت نہایت کم ہوتی ہے جو پست تعدد پر چلنے والے ٹرانزسٹروں میں \عددی{\SI{30}{\pico \farad}} کے لگ بھگ  جبکہ بلند تعدد پر چلنے والے ٹرانزسٹروں میں \عددی{\SI{1}{\pico \farad}} یا اس سے بھی کم ہوتی ہے۔اس کپیسٹر کی قیمت الٹا مائل کرنے والے برقی دباو \عددی{V_{CB}} پر منحصر ہوتی ہے.حقیقت میں \عددی{C_{b'c}} کی قیمت \عددی{V_{CB}^{-\frac{1}{2}}} یا  \عددی{V_{CB}^{-\frac{1}{3}}} کے تناسب  سے تبدیل ہوتی ہے۔صنعت کار عموماً \عددی{C_{b'c}} کو \عددی{C_{ob}} پکار کر اس کی قیمت کپیسٹر کے معلوماتی صفحات میں پیش کرتا ہے۔
@@ -1237,7 +1237,7 @@ C_M'=C \left(1-\frac{1}{A_V} \right)
 \label{شکل_تعددی_ردعمل_اندرونی_مزاحمت}
 \end{figure}
 
-شکل \حوالہ{شکل_تعددی_ردعمل_اندرونی_مزاحمت} میں ٹرانزسٹر کی ساخت دکھائی گئی ہے جہاں بیرونی سروں کو حسب معمول \عددی{E}، \عددی{B} اور \عددی{C} کہا گیا ہے۔ٹرانزسٹر کے بیس  کے بیرونی سرے \عددی{B} اور اندرونی نکتہ \عددی{B'} کے درمیان \موٹا{غیر مطلوب مزاحمت}\فرہنگ{غیر مطلوب مزاحمت}\حاشیہب{parasitic resistor}\فرہنگ{parasitic resistor} \عددی{r_{bb'}} پایا جاتا ہے۔یہ مزاحمت بیس  خطے کی خصوصیات پر منحصر ہوتا ہے۔اسی طرح ایمٹر    پر \عددی{r_{ee'}} اور کلکٹر  پر \عددی{r_{cc'}} غیر مطلوب مزاحمت پائے جاتے ہیں۔الٹ مائلبیس-ایمٹر    جوڑ میں الٹی جانب یک سمتی  برقی رو کو مزاحمت \عددی{r_{\mu}} سے ظاہر کیا جاتا ہے۔اس کتاب میں \عددیء{r_{cc'}}،\عددیء{r_{ee'}} اور \عددی{r_{\mu}} کو صفر تصور کرتے ہوئے نظر انداز کیا جائے گا۔  
+شکل \حوالہ{شکل_تعددی_ردعمل_اندرونی_مزاحمت} میں ٹرانزسٹر کی ساخت دکھائی گئی ہے جہاں بیرونی سروں کو حسب معمول \عددی{E}، \عددی{B} اور \عددی{C} کہا گیا ہے۔ٹرانزسٹر کے بیس  کے بیرونی سرے \عددی{B} اور اندرونی نقطہ \عددی{B'} کے درمیان \موٹا{غیر مطلوب مزاحمت}\فرہنگ{غیر مطلوب مزاحمت}\حاشیہب{parasitic resistor}\فرہنگ{parasitic resistor} \عددی{r_{bb'}} پایا جاتا ہے۔یہ مزاحمت بیس  خطے کی خصوصیات پر منحصر ہوتا ہے۔اسی طرح ایمٹر    پر \عددی{r_{ee'}} اور کلکٹر  پر \عددی{r_{cc'}} غیر مطلوب مزاحمت پائے جاتے ہیں۔الٹ مائلبیس-ایمٹر    جوڑ میں الٹی جانب یک سمتی  برقی رو کو مزاحمت \عددی{r_{\mu}} سے ظاہر کیا جاتا ہے۔اس کتاب میں \عددیء{r_{cc'}}،\عددیء{r_{ee'}} اور \عددی{r_{\mu}} کو صفر تصور کرتے ہوئے نظر انداز کیا جائے گا۔  
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{transistorHighFreqPiModelA}
@@ -1413,7 +1413,7 @@ C_{b'e}=\frac{g_m}{2 \pi f_T}=\frac{0.03}{2 \pi \times 270 \times 10^6} \approx 
 \انتہا{مثال}
 %======
 \جزوحصہ{برقی بار کے موجودگی میں بلند تعددی رد عمل}\شناخت{حصہ_تعددی_ردعمل_برقی_بار_موجود_مشترک_مخارج}
-شکل \حوالہ{شکل_تعددی_ردعمل_ایمپلیفائر_بلند_تعدد_مساوی_دور} میں مشترکہ ایمٹر    ایمپلیفائر اور اس کا بلند تعدد مساوی دور دکھایا گیا ہے۔یہ بلند تعدد پر استعمال ہونے والے مشترکہ ایمٹر    ایمپلیفائر کی عمومی شکل ہے۔ آئیں پہلے مساوی دور کی سادہ شکل حاصل کریں تا کہ توجہ \موٹا{ملر کپیسٹر} پر رکھنی آسان ہو۔پہلے مساوی دور کے داخلی جانب نکتہ دار دائرے میں بند حصے کا مساوی \موٹا{تھونن} دور حاصل کرتے ہیں۔شکل \حوالہ{شکل_تعددی_ردعمل_بلند_تعددی_سادہ_دور} الف میں اس حصے کو پیش کیا گیا ہے جہاں تھونن برقی دباو \عددی{v_{th}} اور تھونن مزاحمت \عددی{R_{th}} کی نشاندہی بھی کی گئی ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_بلند_تعددی_سادہ_دور} ب میں مساوی تھونن دور  دکھایا گیا ہے۔متوازی جڑے \عددی{R_1} اور \عددی{R_2} کی کل مزاحمت کو \عددی{R_B} یعنی
+شکل \حوالہ{شکل_تعددی_ردعمل_ایمپلیفائر_بلند_تعدد_مساوی_دور} میں مشترکہ ایمٹر    ایمپلیفائر اور اس کا بلند تعدد مساوی دور دکھایا گیا ہے۔یہ بلند تعدد پر استعمال ہونے والے مشترکہ ایمٹر    ایمپلیفائر کی عمومی شکل ہے۔ آئیں پہلے مساوی دور کی سادہ شکل حاصل کریں تا کہ توجہ \موٹا{ملر کپیسٹر} پر رکھنی آسان ہو۔پہلے مساوی دور کے داخلی جانب نقطہ دار دائرے میں بند حصے کا مساوی \موٹا{تھونن} دور حاصل کرتے ہیں۔شکل \حوالہ{شکل_تعددی_ردعمل_بلند_تعددی_سادہ_دور} الف میں اس حصے کو پیش کیا گیا ہے جہاں تھونن برقی دباو \عددی{v_{th}} اور تھونن مزاحمت \عددی{R_{th}} کی نشاندہی بھی کی گئی ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_بلند_تعددی_سادہ_دور} ب میں مساوی تھونن دور  دکھایا گیا ہے۔متوازی جڑے \عددی{R_1} اور \عددی{R_2} کی کل مزاحمت کو \عددی{R_B} یعنی
 \begin{align} \label{مساوات_تعددی_ردعمل_بیس_مزاحمت}
 R_B=\frac{R_1 R_2}{R_1+R_2}
 \end{align}
@@ -1590,12 +1590,12 @@ R_B=\frac{R_1 R_2}{R_1+R_2}=\frac{7000 \times 2800}{7000+2800}=\SI{2}{\kilo \ohm
 \caption{مسئلہ نارٹن اور مسئلہ تھونن کے بار بار استعمال سے دور کا حل}
 \label{شکل_تعددی_ردعمل_ماسفیٹ_مشترکہ_مخارج_نارٹن_تھونن_بار_بار}
 \end{figure}
-اس شکل میں نکتہ دار لکیر کے بائیں جانب کا مساوی تھونن دور لیتے ہوئے شکل \حوالہ{شکل_تعددی_ردعمل_ماسفیٹ_مشترکہ_مخارج_نارٹن_تھونن_بار_بار} ب حاصل ہوتا ہے جہاں تھونن مساوی مقدار
+اس شکل میں نقطہ دار لکیر کے بائیں جانب کا مساوی تھونن دور لیتے ہوئے شکل \حوالہ{شکل_تعددی_ردعمل_ماسفیٹ_مشترکہ_مخارج_نارٹن_تھونن_بار_بار} ب حاصل ہوتا ہے جہاں تھونن مساوی مقدار
 \begin{align*}
 \left(\frac{R_B}{R_S+R_B}\right) v_s &=0.625 v_s \hspace{5mm} \textrm{دباو برقی تھونن}\\
 R_S \mathbin{\|} R_B &= \SI{750}{\ohm} \hspace{5mm}\textrm{مزاحمت تھونن}
 \end{align*}
-ہیں۔شکل \حوالہ{شکل_تعددی_ردعمل_ماسفیٹ_مشترکہ_مخارج_نارٹن_تھونن_بار_بار} ب کے نکتہ دار لکیر سے بائیں جانب حصے کا اب مساوی نارٹن دور لیتے ہیں جسے شکل \حوالہ{شکل_تعددی_ردعمل_ماسفیٹ_مشترکہ_مخارج_نارٹن_تھونن_بار_بار_الف} الف میں دکھایا گیا ہے جہاں نارٹن مساوی برقی رو 
+ہیں۔شکل \حوالہ{شکل_تعددی_ردعمل_ماسفیٹ_مشترکہ_مخارج_نارٹن_تھونن_بار_بار} ب کے نقطہ دار لکیر سے بائیں جانب حصے کا اب مساوی نارٹن دور لیتے ہیں جسے شکل \حوالہ{شکل_تعددی_ردعمل_ماسفیٹ_مشترکہ_مخارج_نارٹن_تھونن_بار_بار_الف} الف میں دکھایا گیا ہے جہاں نارٹن مساوی برقی رو 
 \begin{align*}
 \frac{0.625 v_s}{R_B'}=\frac{0.625}{770}v_s
 \end{align*}
@@ -1606,7 +1606,7 @@ R_S \mathbin{\|} R_B &= \SI{750}{\ohm} \hspace{5mm}\textrm{مزاحمت تھون
 \caption{مسئلہ نارٹن اور مسئلہ تھونن کے بار بار استعمال سے دور کا حل}
 \label{شکل_تعددی_ردعمل_ماسفیٹ_مشترکہ_مخارج_نارٹن_تھونن_بار_بار_الف}
 \end{figure}
-شکل \حوالہ{شکل_تعددی_ردعمل_ماسفیٹ_مشترکہ_مخارج_نارٹن_تھونن_بار_بار_الف} الف میں نکتہ دار لکیر کے بائیں جانب حصے کا تھونن مساوی دور لیتے ہوئے شکل  ب حاصل ہوتا ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_ماسفیٹ_مشترکہ_مخارج_نارٹن_تھونن_بار_بار_الف} ب کو دیکھ کر \عددی{v_{b'e}} کی مساوات لکھی جا سکتی ہے۔
+شکل \حوالہ{شکل_تعددی_ردعمل_ماسفیٹ_مشترکہ_مخارج_نارٹن_تھونن_بار_بار_الف} الف میں نقطہ دار لکیر کے بائیں جانب حصے کا تھونن مساوی دور لیتے ہوئے شکل  ب حاصل ہوتا ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_ماسفیٹ_مشترکہ_مخارج_نارٹن_تھونن_بار_بار_الف} ب کو دیکھ کر \عددی{v_{b'e}} کی مساوات لکھی جا سکتی ہے۔
 \begin{align*}
 v_{b'e}&=0.0974 v_s \left(\frac{\frac{1}{sC}}{125+\frac{1}{sC}}\right)=0.0974 v_s \left(\frac{1}{125 \times s C+1}\right)\\
 &=\frac{0.0974 v_s }{1+\frac{j \omega}{26 \times 10^6}}=\frac{0.0974 v_s }{1+\frac{j f}{4 \times 10^6}}
@@ -1626,7 +1626,7 @@ A_v=\frac{v_L}{v_s}&=\frac{v_L}{i_c} \times \frac{i_c}{v_{b'e}} \times \frac{v_{
 R_L&=\frac{R_L' R_D}{R_L'+R_D}\\
 R_G&=\frac{R_1 R_2}{R_1+R_2}
 \end{align*}
-لیتے ہوئے نکتہ دار دائرے میں بند حصے کا تھونن مساوی دور حاصل کرتے ہیں۔
+لیتے ہوئے نقطہ دار دائرے میں بند حصے کا تھونن مساوی دور حاصل کرتے ہیں۔
 \begin{align*}
 R_{th}&=\frac{R_i  R_G}{R_i+R_G}\\
 v_{th}&=\left(\frac{R_G}{R_i+R_G} \right) v_i
@@ -1914,7 +1914,7 @@ f_H=\frac{1}{2 \pi \times 95.5 \times 594 \times 10^{-12}}=\SI{2.8}{\mega \hertz
 اور درمیانی تعدد پر افزائش
 \begin{align*}
 A_v=\frac{v_L}{v_i}&=-3333 \times 0.0416 \times \frac{\frac{3600 \times 5182}{3600+5182}}{\frac{3600 \times 5182}{3600+5182}+100} 
-&=\SI{-132}{\volt \per \volt}
+=\SI{-132}{\volt \per \volt}
 \end{align*}
 %
 \begin{figure}
@@ -1929,7 +1929,7 @@ A_v=\frac{v_L}{v_i}&=-3333 \times 0.0416 \times \frac{\frac{3600 \times 5182}{36
 \انتہا{مثال}
 %==========
 \حصہ{کیسکوڈ ایمپلیفائر}
-ایمپلیفائر کے \موٹا{بلند تعددی} رد عمل پر غور کے دوران یہ حقیقت سامنے آئی کہ اگرچہ \عددی{C_{b'c}} کی قیمت نہایت کم لیکن \موٹا{ملر کپیسٹر}\فرہنگ{ملر کپیسٹر}\فرہنگ{Miller capacitor}\حاشیہب{Miller capacitor} کی وجہ سے بلند انقطاعی نکتہ تعین کرنے میں اس کا کردار نہایت اہم ہے۔ٹرانزسٹر ایمپلیفائر بلند انقطاعی نقطے سے کم تعدد کے اشارات کو بڑھاتا ہے۔یوں ہم چاہیں گے کہ یہ نکتہ بلند سے بلند تر تعدد پر پایا جائے۔اس حصے میں \موٹا{کیسکوڈ ایمپلیفائر}\فرہنگ{کیسکوڈ}\فرہنگ{cascode amplifier}\حاشیہد{فریڈرک ونٹن ہنٹ نے اس ایمپلیفائر کو دریافت کیا اور اس کا نام کیسکوڈ ایمپلیفائر رکھا۔} پر غور کیا جائے گا جس میں ملر کپیسٹر کی قیمت کم سے کم ہونے کی بنا پر زیادہ سے زیادہ تعدد پر بلند تر انقطاعی نکتہ حاصل ہوتا ہے۔\حاشیہب{cascode amplifier}
+ایمپلیفائر کے \موٹا{بلند تعددی} رد عمل پر غور کے دوران یہ حقیقت سامنے آئی کہ اگرچہ \عددی{C_{b'c}} کی قیمت نہایت کم لیکن \موٹا{ملر کپیسٹر}\فرہنگ{ملر کپیسٹر}\فرہنگ{Miller capacitor}\حاشیہب{Miller capacitor} کی وجہ سے بلند انقطاعی نقطہ تعین کرنے میں اس کا کردار نہایت اہم ہے۔ٹرانزسٹر ایمپلیفائر بلند انقطاعی نقطے سے کم تعدد کے اشارات کو بڑھاتا ہے۔یوں ہم چاہیں گے کہ یہ نقطہ بلند سے بلند تر تعدد پر پایا جائے۔اس حصے میں \موٹا{کیسکوڈ ایمپلیفائر}\فرہنگ{کیسکوڈ}\فرہنگ{cascode amplifier}\حاشیہد{فریڈرک ونٹن ہنٹ نے اس ایمپلیفائر کو دریافت کیا اور اس کا نام کیسکوڈ ایمپلیفائر رکھا۔} پر غور کیا جائے گا جس میں ملر کپیسٹر کی قیمت کم سے کم ہونے کی بنا پر زیادہ سے زیادہ تعدد پر بلند تر انقطاعی نقطہ حاصل ہوتا ہے۔\حاشیہب{cascode amplifier}
 
 شکل \حوالہ{شکل_تعددی_ردعمل_کیسکوڈ_ایمپلیفائر} الف میں کیسکوڈ ایمپلیفائر دکھایا گیا ہے۔\عددی{Q_1} اور اس کے ساتھ منسلک \عددیء{R_1}، \عددیء{R_2}، \عددی{R_E} اور  \عددی{C_E}  مل کر مشترکہ ایمٹر        طرز کا ایمپلیفائر بناتے ہیں جسے کپیسٹر \عددی{C_{B1}} کے ذریعہ داخلی اشارہ \عددی{v_i} فراہم کیا گیا ہے۔\عددی{R_i} داخلی اشارہ فراہم کرنے والے کی مزاحمت ہے۔عام صورت میں \عددی{Q_1} کے کلکٹر  پر برقی بار \عددی{R_L} لادا جاتا ہے لیکن کیسکوڈ میں ایسا نہیں کیا جاتا۔کیسکوڈ میں \عددی{Q_2} بطور برقی بار کردار ادا کرتا ہے۔ \عددی{Q_2} کے بیس  پر بیرونی کپیسٹر \عددی{C_{B2}} کا کردار نہایت اہم ہے۔درکار تعدد پر  \عددی{C_{B2}} بطور قصر دور کام کرتے ہوئے \عددی{Q_2} کے بیس  کو برقی زمین پر رکھتا ہے۔\عددی{Q_2} اور اس کے ساتھ منسلک \عددیء{R_1'}، \عددی{R_2'} اور \عددی{C_{B2}} مل کر مشترکہ بیس  طرز کا ایمپلیفائر بناتے ہیں۔
 
@@ -2223,18 +2223,18 @@ A_v=\frac{v_L}{v_i}=-8000 \times 0.02 \times \frac{2255}{2255+50000}=\SI{-6.9}{\
 \end{figure}
 \انتہا{مثال}
 %======================
-\حصہ{فلٹر}
-ایسا دور ہے جو کسی خاص حدود کے درمیان تعدد رکھنے والے اشارات کو گزرنے دے کو \موٹا{پٹی گزار فلٹر}\فرہنگ{فلٹر!پٹی گزار}\حاشیہب{band pass filter}\فرہنگ{filter!band pass} کہتے ہیں۔اس کے برعکس ایک ایسا دور جو کسی خاص حدود کے درمیان تعدد رکھنے والے اشارات کو روک دے اور انہیں گزرنے نہ دے کو \موٹا{پٹی روک فلٹر}\فرہنگ{فلٹر!پٹی روک}\حاشیہب{band stop filter}\فرہنگ{filter!band stop} کہتے ہیں۔شکل \حوالہ{شکل_تعددی_ردعمل_فلٹر_اقسام} الف میں پٹی گزار فلٹر، شکل  ب میں پٹی روک فلٹر، شکل  پ میں پست گزار فلٹر جبکہ شکل  ت میں بلند گزار فلٹر  کی افزائش بالمقابل تعدد  کے خط دکھائے گئے ہیں۔حقیقت میں ایسے کامل فلٹر نہیں پائے جاتے اور حقیقی  پست گزار فلٹر \عددیء{\omega_H} سے قدر بلند تعدد کے اشارات کو بھی گزارتا ہے۔فلٹر ایسے قلیوں سے حاصل کیا جاتا ہے جس کا خط شکل \حوالہ{شکل_تعددی_ردعمل_فلٹر_اقسام} کے قریب قریب ہو۔
+\حصہ{فلٹر یا چھلنی}
+ایسا دور جو کسی خاص حدود کے درمیان تعدد رکھنے والے اشارات کو گزرنے دے کو \موٹا{پٹی گزار فلٹر}\فرہنگ{فلٹر!پٹی گزار}\حاشیہب{band pass filter}\فرہنگ{filter!band pass} یا  \موٹا{پٹی گزار چھلنی}\فرہنگ{چھلنی!پٹی گزار} کہتے ہیں۔اس کے برعکس ایک ایسا دور جو کسی خاص حدود کے درمیان تعدد رکھنے والے اشارات کو روک دے اور انہیں گزرنے نہ دے کو \موٹا{پٹی روک فلٹر}\فرہنگ{فلٹر!پٹی روک}\حاشیہب{band stop filter}\فرہنگ{filter!band stop} یا  \موٹا{پٹی روک چھلنی}\فرہنگ{چھلنی!پٹی روک} کہتے ہیں۔شکل \حوالہ{شکل_تعددی_ردعمل_فلٹر_اقسام} الف میں پٹی گزار فلٹر، شکل  ب میں پٹی روک فلٹر، شکل  پ میں پست گزار فلٹر جبکہ شکل  ت میں بلند گزار فلٹر  کی افزائش بالمقابل تعدد  کے خط دکھائے گئے ہیں۔حقیقت میں ایسے کامل فلٹر نہیں پائے جاتے اور حقیقی  پست گزار فلٹر \عددیء{\omega_H} سے قدر بلند تعدد کے اشارات کو بھی گزارتا ہے۔فلٹر ایسے قلیوں سے حاصل کیا جاتا ہے جس کا خط شکل \حوالہ{شکل_تعددی_ردعمل_فلٹر_اقسام} کے قریب قریب ہو۔
 
 حسابی ایمپلیفائر استعمال کرتے ہوئے ہر قسم کے فلٹر تخلیق دئے جاتے ہیں۔ایسے فلٹروں میں \موٹا{بٹر ورت فلٹر} کا اپنا ایک مقام ہے۔آئیں اس پر غور کرتے ہیں۔ 
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{filterDefinition}
-\caption{فلٹر کے اقسام}
+\caption{فلٹر یا چھلنی کے اقسام}
 \label{شکل_تعددی_ردعمل_فلٹر_اقسام}
 \end{figure}
 %
-\حصہ{بٹر ورت فلٹر}
+\حصہ{بٹر ورت فلٹر (چھلنی)}
 کسی بھی \عددیء{n} درجی تسلسل کو
 \begin{align*}
 s^n+c_{n-1} s^{n-1}+c_{n-2} s^{n-2}+\cdots+c_2 s^2+c_1 s+c_0
@@ -2288,7 +2288,7 @@ s_m=-\zeta_m \omega_0 +j \omega_0 \sqrt{1-\zeta_m^2}= \abs {s_m} \phase \theta
 \begin{align}\label{مساوات_تعددی_ردعمل_صفر_حتمی_فاصلہ}
 \abs{s_m}&=\sqrt{\zeta_m^2 \omega_0^2 +\omega_0^2\left(1 -\zeta_m^2\right)}=\omega_0
 \end{align}
-کے برابر ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_تسلسل_کے_صفر} ب میں نکتہ  \عددیء{s_m} سے  نکتہ \عددیء{o} تک کا فاصلہ \عددیء{\abs{s_m}} یعنی اس کی حتمی قیمت دکھلاتا ہے۔اس شکل میں زاویہ \عددیء{\phase{\theta_m}} دکھایا گیا ہے۔شکل کو دیکھتے ہوئے
+کے برابر ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_تسلسل_کے_صفر} ب میں نقطہ  \عددیء{s_m} سے  نقطہ \عددیء{o} تک کا فاصلہ \عددیء{\abs{s_m}} یعنی اس کی حتمی قیمت دکھلاتا ہے۔اس شکل میں زاویہ \عددیء{\phase{\theta_m}} دکھایا گیا ہے۔شکل کو دیکھتے ہوئے
 \begin{align}\label{مساوات_تعددی_ردعمل_دھیماپن_کا_حصول}
 \cos \theta_m=\frac{\zeta_m \omega_0}{\omega_0}=\zeta_m
 \end{align}
@@ -2320,7 +2320,7 @@ A(s)=\frac{A_0}{B_n(s)}
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{butterworthFilterLowPassResponse}
-\caption{بٹر ورت پست گزار فلٹر}
+\caption{بٹر ورت پست گزار چھلنی}
 \label{شکل_تعددی_ردعمل_بٹر_ورت_پست_گزار}
 \end{figure}
 
@@ -2548,7 +2548,7 @@ A_{v2}&=3-1.848=1.152
 \item
 \عددی{R_1} اور \عددی{R_2} کی ایسی قیمتیں حاصل کریں کہ \عددی{i_L} کا حیطہ زیادہ سے زیادہ ممکن ہو۔
 \item
-پست انقطاعی نکتہ \عددی{\SI{5}{\hertz}} پر رکھنے کے لئے درکار کپیسٹر \عددی{C_e} کی  قیمت حاصل کریں۔
+پست انقطاعی نقطہ \عددی{\SI{5}{\hertz}} پر رکھنے کے لئے درکار کپیسٹر \عددی{C_e} کی  قیمت حاصل کریں۔
 \item
 \عددی{A_i=\tfrac{i_L}{i_i}} حاصل کریں اور اس کے حتمی قیمت کا بوڈا خط کھینچیں۔
 \end{itemize}
@@ -2568,7 +2568,7 @@ A_i=\left(\frac{\beta R_B }{R_B+r_{be}}\right) \frac{s+\frac{1}{R_E C_E}}{s+\fra
 \انتہا{سوال}
 %================
 \ابتدا{سوال}
-شکل \حوالہ{شکل_تعددی_ردعمل_سوال_دائرہ_انقطاعی_نکتہ_الف} ب میں \عددیء{R_B=\SI{200}{\kilo \ohm}}،\عددیء{r_i=\SI{40}{\kilo \ohm}} اور \عددی{\beta=137} ہیں۔پست انقطاعی نکتہ \عددی{\SI{60}{\hertz}} پر حاصل کرنے کے لئے درکار \عددی{C_b} کی قیمت کیا ہو گی؟ \عددی{A_i=\tfrac{i_L}{i_i}} کی مساوات حاصل کرتے ہوئے اس کے حتمی قیمت کا بوڈا خط کھینچیں۔
+شکل \حوالہ{شکل_تعددی_ردعمل_سوال_دائرہ_انقطاعی_نکتہ_الف} ب میں \عددیء{R_B=\SI{200}{\kilo \ohm}}،\عددیء{r_i=\SI{40}{\kilo \ohm}} اور \عددی{\beta=137} ہیں۔پست انقطاعی نقطہ \عددی{\SI{60}{\hertz}} پر حاصل کرنے کے لئے درکار \عددی{C_b} کی قیمت کیا ہو گی؟ \عددی{A_i=\tfrac{i_L}{i_i}} کی مساوات حاصل کرتے ہوئے اس کے حتمی قیمت کا بوڈا خط کھینچیں۔
 
 جوابات:\عددی{R_e \gg r_e} کی بنا پر \عددی{r_e} کو نظر انداز کرتے ہوئے \عددیء{C_b=\SI{21.8}{\nano \farad}} حاصل ہوتا ہے۔\عددی{R_B \mathbin{\|} (r_{be}+(\beta +1)R_E)} کو \عددی{R_B'} لکھتے ہوئے
 \begin{align*}
