--- a/tex/electronicsOPAMP.tex
+++ b/tex/electronicsOPAMP.tex
@@ -850,7 +850,7 @@ A_v=1+\frac{0}{\infty} =1
 
 طبعی متغیرات\حاشیہب{variables} مثلاً  کمیت، حرارت وغیرہ  کی برقیاتی پیمائش سے پہلے انہیں عموماً  \موٹا{مبدل توانائی}\فرہنگ{مبدل توانائی}\فرہنگ{transducer}\حاشیہب{transducer}  کے مدد سے برقی اشارات میں تبدیل کیا جاتا ہے اور ان برقی اشارات کو پیمایشی آلہ\فرہنگ{پیمایشی آلہ}\حاشیہب{measuring instrument}  سے ناپا جاتا ہے۔
 
-	جیسا کہ آپ جانتے ہیں کہ کسی بھی دور کا تھونن  مساوی دور\فرہنگ{تھونن دور}\حاشیہب{Thevenin circuit} بنایا جا سکتا ہے جسے ایک عدد پیدا کار برقی دباو اور ایک عدد مزاحمت کی شکل دی جاتی ہے۔مبدل توانائی کا تھونن دور شکل \حوالہ{شکل_وسطی_دور_حساس_اشارہ} الف میں بائیں جانب نکتہ دار لکیر میں گھیرا دکھایا گیا ہے جہاں \عددی{v_s} اس کی تھونن برقی دباو اور \عددی{R_S}  اس کی تھونن مزاحمت ہے۔پیمایشی آلہ داخلی سروں پر کسی قسم کا برقی اشارہ خارج نہیں کرتا بلکہ ان سروں پر یہ صرف اشارہ حاصل کرنے کی صلاحیت رکھتا ہے لہٰذا اس کے داخلی جانب کا تھونن دور صرف ایک عدد مزاحمت \عددی{R_M}  پر مبنی ہوتا ہے جیسے شکل-الف میں دائیں جانب دکھایا گیا ہے۔شکل-الف میں مبدل توانائی کے خارجی سروں کو پیمایشی آلہ کے داخلی سروں کے ساتھ جوڑا گیا ہے تا کہ مبدل توانائی کا اشارہ \عددی{v_s} ناپا جا سکے۔پیمایشی آلہ داخلی سروں  پر لاگو برقی دباو \عددی{v_m} ناپتا ہے۔
+	جیسا کہ آپ جانتے ہیں کہ کسی بھی دور کا تھونن  مساوی دور\فرہنگ{تھونن دور}\حاشیہب{Thevenin circuit} بنایا جا سکتا ہے جسے ایک عدد پیدا کار برقی دباو اور ایک عدد مزاحمت کی شکل دی جاتی ہے۔مبدل توانائی کا تھونن دور شکل \حوالہ{شکل_وسطی_دور_حساس_اشارہ} الف میں بائیں جانب نقطہ دار لکیر میں گھیرا دکھایا گیا ہے جہاں \عددی{v_s} اس کی تھونن برقی دباو اور \عددی{R_S}  اس کی تھونن مزاحمت ہے۔پیمایشی آلہ داخلی سروں پر کسی قسم کا برقی اشارہ خارج نہیں کرتا بلکہ ان سروں پر یہ صرف اشارہ حاصل کرنے کی صلاحیت رکھتا ہے لہٰذا اس کے داخلی جانب کا تھونن دور صرف ایک عدد مزاحمت \عددی{R_M}  پر مبنی ہوتا ہے جیسے شکل-الف میں دائیں جانب دکھایا گیا ہے۔شکل-الف میں مبدل توانائی کے خارجی سروں کو پیمایشی آلہ کے داخلی سروں کے ساتھ جوڑا گیا ہے تا کہ مبدل توانائی کا اشارہ \عددی{v_s} ناپا جا سکے۔پیمایشی آلہ داخلی سروں  پر لاگو برقی دباو \عددی{v_m} ناپتا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{bufferingWeakSignal}
@@ -1133,7 +1133,7 @@ v_o=\frac{R_b}{R_a}\left(v_{s2}-v_{s1}\right)
 حل:
 مشترکہ داخلی مزاحمت حاصل کرنے کی خاطر دونوں داخلی سروں  کو آپس میں جوڑتے ہوئے ان پر مشترکہ اشارہ \عددی{v_s} لاگو کیا جاتا ہے۔اشارے سے \عددی{i_a} اور \عددی{i_b} برقی رو منفی کار میں داخل ہوں گے۔مشترکہ مزاحمت داخلی برقی دباو اور داخلی برقی رو کے مجموعہ کی شرح کو کہتے ہیں یعنی
 \begin{align*}
-R_{\textup{مشترکہ}}=\frac{v_s}{i_a+i_b}
+R_{\textup{مشترک}}=\frac{v_s}{i_a+i_b}
 \end{align*} 
 آئیں داخلی مزاحمت کو پہلے حساب و کتاب سے حاصل کریں۔تمام مزاحمت \عددی{R} کے برابر ہونے کی صورت میں
 \begin{align*}
@@ -1315,19 +1315,19 @@ R_3=\SI{10}{\kilo \ohm} \hspace{5mm} R_4=\SI{10}{\kilo \ohm}\\
 v_2=4+0.003 \sin \omega t\\
 v_1=4-0.003 \sin \omega  t
 \end{align*}
-ہیں۔آلاتی ایمپلیفائر کے ہر جوڑ پر برقی دباو حاصل کریں۔\موٹا{مشترکہ اشارہ رد کرنے کی صلاحیت} \عددی{CMRR} حاصل کریں۔
+ہیں۔آلاتی ایمپلیفائر کے ہر جوڑ پر برقی دباو حاصل کریں۔\موٹا{مشترک اشارہ رد کرنے کی صلاحیت} \عددی{CMRR} حاصل کریں۔
 
 حل:
 
 دونوں داخلی سروں  پر یکساں برقی دباو کو مشترکہ برقی دباو کہتے ہیں جبکہ دونوں داخلی سروں  کے مابین برقی دباو کو تفرق برقی دباو کہتے ہیں۔یوں
 \begin{align*}
-v_{\textrm{مشترکہ}}&=\SI{4}{\volt}\\
+v_{\textrm{مشترک}}&=\SI{4}{\volt}\\
 v_{\textup{تفرق}}&=0.06 \sin \omega t
 \end{align*}
 ہیں۔یوں انہیں
 \begin{align*}
-v_2=v_{\textrm{مشترکہ}}+ \frac{v_{\textrm{تفرق}}}{2}\\
-v_1=v_{\textrm{مشترکہ}}-\frac{v_{\textrm{تفرق}}}{2}
+v_2=v_{\textrm{مشترک}}+ \frac{v_{\textrm{تفرق}}}{2}\\
+v_1=v_{\textrm{مشترک}}-\frac{v_{\textrm{تفرق}}}{2}
 \end{align*}
 لکھا جا سکتا ہے۔
 
@@ -1533,12 +1533,12 @@ CMRR_{\textrm{کمتر}}=814
 \end{align*}
 جب تک یہ مقدار حسابی ایمپلیفائر کے \موٹا{رفتار چال} سے کم ہو اس وقت تک حسابی ایمپلیفائر خوش اسلوبی سے اس اشارے کو خارج کرے گا۔جیسے ہی یہ مقدار \موٹا{رفتار چال} سے بڑھ جائے، حسابی ایمپلیفائر کے خارجی اشارے میں خلل پیدا ہو جائے گا۔حسابی ایمپلیفائر کے \موٹا{رفتار چال} کو اس کی \موٹا{پوری طاقت پر تعددی دائرہ کارکردگی}\فرہنگ{پورے طاقت پر دائرہ کارکردگی}\حاشیہب{full power band width} کی شکل میں یوں بیان کیا جاتا ہے
 \begin{align}
-\omega_{\textrm{کارکردگی دائرہ}}=\frac{\textrm{چال رفتار}}{V_p}\\
-f_{\textrm{کارکردگی دائرہ}}=\frac{\textrm{چال رفتار}}{2 \pi V_p}
+\omega_{\textrm{دائرہ کارکردگی}}=\frac{\textrm{رفتار چال}}{V_p}\\
+f_{\textrm{دائرہ کارکردگی}}=\frac{\textrm{رفتار چال}}{2 \pi V_p}
 \end{align}   
 جہاں \عددی{V_p} حسابی ایمپلیفائر کی زیادہ سے زیادہ ممکنہ  خارجی برقی دباو ہے۔کم برقی دباو خارج کرتے ہوئے اس تعدد کی قیمت بڑھ جاتی ہے۔یوں \عددی{V_0} برقی دباو خارج کرتے ہوئے
  \begin{align}
-\omega_{\textrm{تر بلند}}=\frac{\textrm{چال رفتار}}{V_0}
+\omega_{\textrm{بلند تر}}=\frac{\textrm{رفتار چال}}{V_0}
 \end{align}   
 ہو گا۔شکل \حوالہ{شکل_حسابی_رفتار_چال_محدود_اشارہ} میں خارجی اشارے پر رفتار چال کا اثر دکھایا گیا ہے۔یہ اشارہ  اپنی اصل صورت کھو کر تکونی شکل اختیار کر گیا ہے جہاں تکون کے اطراف \عددی{رفتار چال} سے بلند اور پست ہو رہے ہیں۔
 \begin{figure}
@@ -1858,7 +1858,7 @@ R=\frac{R_1 R_2}{R_1+R_2}
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{comparator}
-\caption{موزنہ کار}
+\caption{موازنہ کار}
 \label{شکل_حسابی_موازنہ_کار}
 \end{figure}
 
@@ -1877,7 +1877,7 @@ R=\frac{R_1 R_2}{R_1+R_2}
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{comparatorExample}
-\caption{موزنہ کار کی مثال}
+\caption{موازنہ کار کی مثال}
 \label{شکل_حسابی_موازنہ_کار_مقررہ_حدف}
 \end{figure}
 
