--- a/tex/electronicsOscillators.tex
+++ b/tex/electronicsOscillators.tex
@@ -115,24 +115,24 @@ I_2 =I_1+I_0=I_0 \left (2+\frac{1}{j \omega C R} \right)
 \begin{align*}
 V_2 &=V_1+\frac{I_2}{j \omega C} \\
 &=I_0 \left (R+\frac{1}{j \omega C} \right )+\frac{I_0}{j \omega C} \left (2+\frac{1}{j \omega C R} \right )\\
-&=I_0 \left (R+\frac{3}{j \omega C} +\frac{1}{\left(j \omega C \right )^2 R}\right )
+&=I_0 \left [R+\frac{3}{j \omega C} +\frac{1}{\left(j \omega C \right )^2 R}\right ]
 \end{align*}
 یوں
 \begin{align*}
-I_3=\frac{V_2}{R}=I_0 \left (1+\frac{3}{j \omega C R}+\frac{1}{\left(j \omega C R \right )^2} \right )
+I_3=\frac{V_2}{R}=I_0 \left [1+\frac{3}{j \omega C R}+\frac{1}{\left(j \omega C R \right )^2} \right ]
 \end{align*}
 اور
 \begin{align*}
 I_4 &=I_3 +I_2\\
-&=I_0 \left (1+\frac{3}{j \omega C R}+\frac{1}{\left(j \omega C R \right )^2} \right )+I_0 \left (2+\frac{1}{j \omega C R} \right) \\
-&=I_0 \left(3+\frac{4}{j \omega C R}+\frac{1}{\left (j \omega C R \right )^2} \right)
+&=I_0 \left [1+\frac{3}{j \omega C R}+\frac{1}{\left(j \omega C R \right )^2} \right ]+I_0 \left [2+\frac{1}{j \omega C R} \right] \\
+&=I_0 \left[3+\frac{4}{j \omega C R}+\frac{1}{\left (j \omega C R \right )^2} \right]
 \end{align*}
 ہوں گے۔اسی طرح
 \begin{gather}
 \begin{aligned} \label{مساوات_مزاحمت_کپیسٹر_دباو_تین}
 V_3 &=V_2 +\frac{I_4}{j \omega C} \\
-&=I_0 \left (R+\frac{3}{j \omega C} +\frac{1}{\left(j \omega C \right )^2 R}\right )+ \frac{I_0}{j \omega C} \left(3+\frac{4}{j \omega C R}+\frac{1}{\left (j \omega C R \right )^2} \right) \\
-&=I_0 \left(R+\frac{6}{j \omega C}+\frac{5}{\left(j \omega C \right )^2 R} +\frac{1}{\left(j \omega C \right )^3 R^2}\right)
+&=I_0 \left [R+\frac{3}{j \omega C} +\frac{1}{\left(j \omega C \right )^2 R}\right ]+ \frac{I_0}{j \omega C} \left[3+\frac{4}{j \omega C R}+\frac{1}{\left (j \omega C R \right )^2} \right] \\
+&=I_0 \left[R+\frac{6}{j \omega C}+\frac{5}{\left(j \omega C \right )^2 R} +\frac{1}{\left(j \omega C \right )^3 R^2}\right]
 \end{aligned}
 \end{gather}
 ہو گا۔اگر
@@ -142,29 +142,29 @@ R_c = k R
 لیا جائے تب
 \begin{align*}
 I_5 &= \frac{V_3}{R_c} =\frac{V_3}{k R}\\ 
-&= I_0 \left(\frac{1}{k}+\frac{6}{j \omega C R k}+\frac{5}{\left(j \omega C  R\right )^2 k} +\frac{1}{\left(j \omega C  R\right )^3 k}\right)
+&= I_0 \left[\frac{1}{k}+\frac{6}{j \omega C R k}+\frac{5}{\left(j \omega C  R\right )^2 k} +\frac{1}{\left(j \omega C  R\right )^3 k}\right]
 \end{align*}
 اور
 \begin{align*}
 I_6 &=I_5 + I_4 \\
-&=I_0 \left(\frac{1}{k}+\frac{6}{j \omega C R k}+\frac{5}{\left(j \omega C  R\right )^2 k} +\frac{1}{\left(j \omega C  R\right )^3 k}\right) \\
-& \qquad \qquad +I_0 \left(3+\frac{4}{j \omega C R}+\frac{1}{\left (j \omega C R \right )^2} \right)
+&=I_0 \left[\frac{1}{k}+\frac{6}{j \omega C R k}+\frac{5}{\left(j \omega C  R\right )^2 k} +\frac{1}{\left(j \omega C  R\right )^3 k}\right] \\
+& \qquad \qquad +I_0 \left[3+\frac{4}{j \omega C R}+\frac{1}{\left (j \omega C R \right )^2} \right]
 \end{align*}
 ہوں گے۔چونکہ خیالی عدد \عددیء{j=\sqrt{-1}} ہوتا ہے لہٰذا \عددیء{j^2=-1} اور \عددیء{j^3=-j} ہو گا۔اسی طرح \عددیء{\frac{1}{j}=-j} ہو گا۔ یوں
 \begin{gather}
 \begin{aligned} \label{مساوات_مزاحمت_کپیسٹر_بار_کی_رو}
-I_6&=I_0 \left( \frac{1}{k}+3 -\frac{\left(\frac{5}{k}+1 \right )}{\left(\omega C R \right)^2}+j \left [\frac{1}{\left (\omega C R \right)^3 k}  -\frac{\left(\frac{6}{k}+4 \right)}{\omega C R}\right] \right )
+I_6&=I_0 \left[ \frac{1}{k}+3 -\frac{\left(\frac{5}{k}+1 \right )}{\left(\omega C R \right)^2}+j \left [\frac{1}{\left (\omega C R \right)^3 k}  -\frac{\left(\frac{6}{k}+4 \right)}{\omega C R}\right] \right ]
 \end{aligned}
 \end{gather}
 شکل کو دیکھتے ہوئے معلوم ہوتا ہے کہ \عددیء{I_6 = -g_m v_{be}} اور \عددیء{v_{be}=I_o r_{be}} کے برابر ہیں لہٰذا \عددیء{I_6=-g_m r_{be} I_o} ہو گا۔باب \حوالہ{باب_دو_جوڑ_ٹرانزسٹر} میں مساوات \حوالہ{مساوات_ٹرانزسٹر_داخلی_مزاحمت_بالمقابل_موصلیت_نما} کے تحت \عددیء{g_m r_{be}=\beta} ہے۔ یوں \عددیء{I_6 =-\beta I_0} ہو گا جسے مندرجہ بالا مساوات کے استعمال سے
 \begin{align} \label{مساوات_مزاحمت_کپیسٹر_مکمل_مساوت}
-I_0 \left( \frac{1}{k}+3 -\frac{\left(\frac{5}{k}+1 \right )}{\left(\omega C R \right)^2}+j \left [\frac{1}{\left (\omega C R \right)^3 k}  -\frac{\left(\frac{6}{k}+4 \right)}{\omega C R}\right] \right )=-\beta I_0
+I_0 \left[ \frac{1}{k}+3 -\frac{\left(\frac{5}{k}+1 \right )}{\left(\omega C R \right)^2}+j \left [\frac{1}{\left (\omega C R \right)^3 k}  -\frac{\left(\frac{6}{k}+4 \right)}{\omega C R}\right] \right ]=-\beta I_0
 \end{align}
 لکھا جا سکتا ہے۔
 
 مساوات \حوالہ{مساوات_مزاحمت_کپیسٹر_مکمل_مساوت} میں مساوی نشان کے دونوں جانب کے حقیقی مقداریں آپس میں برابر ہوں گے اور اسی طرح مساوی نشان کے دونوں جانب خیالی مقداریں آپس میں برابر ہوں گے۔یوں اس مساوات کو دو مساوات کی شکل میں لکھا جا سکتا ہے۔خیالی مقداروں سے حاصل ہوتا ہے۔
 \begin{align*}
-I_0 \left(\frac{1}{\left( \omega C R\right)^3 k }-\frac{\left(\frac{6}{k}+4 \right)}{\omega C R} \right)=0
+I_0 \left[\frac{1}{\left( \omega C R\right)^3 k }-\frac{\left(\frac{6}{k}+4 \right)}{\omega C R} \right]=0
 \end{align*}
 جس سے حاصل ہوتا ہے
 \begin{gather}
@@ -178,7 +178,7 @@ f_0 &=\frac{1}{2 \pi C R \sqrt{6+4 k}}
 
 مساوات \حوالہ{مساوات_مزاحمت_کپیسٹر_مکمل_مساوت} کے حقیقی مقداروں سے حاصل ہوتا ہے۔
 \begin{align*}
--I_0 \beta = I_0 \left(\frac{1}{k}+3-\frac{\left(\frac{5}{k}+1 \right)}{\left(\omega C R \right)^2} \right)
+-I_0 \beta = I_0 \left[\frac{1}{k}+3-\frac{\left(\frac{5}{k}+1 \right)}{\left(\omega C R \right)^2} \right]
 \end{align*}
 جسے مساوات \حوالہ{مساوات_مزاحمت_کپیسٹر_مرتعش_قدرتی_تعداد_ارتعاش} کی مدد سے یوں لکھا جا سکتا ہے۔
 \begin{gather}
@@ -558,7 +558,7 @@ C=\frac{C_1 C_2}{C_1 + C_2}
 یعنی \عددیء{C_1} اور \عددیء{C_2} کی سلسلہ وار جڑی کل کپیسٹر ہے۔
 
 \حصہ{ہارٹلے اور کالپٹس مرتعش}
-شکل \حوالہ{شکل_مرتعش_ہارٹلے_کالپٹس} میں ٹرانزسٹر ایمپلیفائر استعمال کرتے ہوئے ہارٹلے اور کالپٹس مرتعش بنائے گئے ہیں۔شکل  الف میں واپس کار یعنی \عددیء{L_1}، \عددیء{L_2} اور \عددیء{C} کی شمولیت سے بنیادی ایمپلیفائر مرتعش میں تبدیل ہو جاتا ہے۔شکل \حوالہ{شکل_عمومی_مرتعش} کے ساتھ موازنہ کرنے سے آپ دیکھ سکتے ہیں کہ \عددیء{L_1} دراصل \عددیء{X_1} ہے، \عددیء{L_2} دراصل \عددیء{X_2} ہے جبکہ \عددیء{C} دراصل \عددیء{X_3} ہے۔\عددیء{C_b} اور \عددیء{C_c} اس بات کو یقینی بناتے ہیں کہ  واپس کار کی شمولیت سے بنیادی ایمپلیفائر کے نکتہ مائل پر کوئی اثر نہیں ہو گا۔شکل  ب میں \عددیء{C_c} کی ضرورت نہیں چونکہ \عددیء{C_1}، \عددیء{C_2} اور \عددیء{C_b} کی موجودگی میں اس راستے یک سمتی رو کا گزر ممکن نہیں۔\عددیء{C_e} قصری کپیسٹر\حاشیہب{bypass capacitor} ہے جبکہ \عددیء{C_c} اور \عددیء{C_b} جفتی کپیسٹر\حاشیہب{coupling capacitors} ہیں۔چالو تعدد پر \عددیء{C_e}، \عددیء{C_b} اور \عددیء{C_c} کو لامحدود تصور کیا جاتا ہے۔
+شکل \حوالہ{شکل_مرتعش_ہارٹلے_کالپٹس} میں ٹرانزسٹر ایمپلیفائر استعمال کرتے ہوئے ہارٹلے اور کالپٹس مرتعش بنائے گئے ہیں۔شکل  الف میں واپس کار یعنی \عددیء{L_1}، \عددیء{L_2} اور \عددیء{C} کی شمولیت سے بنیادی ایمپلیفائر مرتعش میں تبدیل ہو جاتا ہے۔شکل \حوالہ{شکل_عمومی_مرتعش} کے ساتھ موازنہ کرنے سے آپ دیکھ سکتے ہیں کہ \عددیء{L_1} دراصل \عددیء{X_1} ہے، \عددیء{L_2} دراصل \عددیء{X_2} ہے جبکہ \عددیء{C} دراصل \عددیء{X_3} ہے۔\عددیء{C_b} اور \عددیء{C_c} اس بات کو یقینی بناتے ہیں کہ  واپس کار کی شمولیت سے بنیادی ایمپلیفائر کے نقطہ مائل پر کوئی اثر نہیں ہو گا۔شکل  ب میں \عددیء{C_c} کی ضرورت نہیں چونکہ \عددیء{C_1}، \عددیء{C_2} اور \عددیء{C_b} کی موجودگی میں اس راستے یک سمتی رو کا گزر ممکن نہیں۔\عددیء{C_e} قصری کپیسٹر\حاشیہب{bypass capacitor} ہے جبکہ \عددیء{C_c} اور \عددیء{C_b} جفتی کپیسٹر\حاشیہب{coupling capacitors} ہیں۔چالو تعدد پر \عددیء{C_e}، \عددیء{C_b} اور \عددیء{C_c} کو لامحدود تصور کیا جاتا ہے۔
 
 بلند تعدد پر ان اشکال کو حل کرتے ہوئے ٹرانزسٹر کے بلند تعددی ماڈل استعمال ہو گا۔ایسا کرتے وقت ماڈل کے مختلف جزو کو بھی واپس کار کا حصہ تصور کیا جا سکتا ہے۔مثلاً نہایت بلند تعدد کالپٹس مرتعش تخلیق دیتے وقت ٹرانزسٹر کے بلند تعدد ماڈل کے جزو \عددیء{C_{be}} اور \عددیء{C_{bc}} کا مساوی ملر کپیسٹر \عددیء{C_M}\حاشیہب{Miller capacitance} کے مجموعے کو بطور \عددیء{C_1} استعمال کیا جاتا ہے (یعنی \عددیء{C_1=C_{be}+C_M})۔
 %
